modify the obj data.

--- a/file/war3map.w3t.ini
+++ b/file/war3map.w3t.ini
@@ -3408,7 +3408,7 @@ Tip = "|cff0080ff【仙】法魂Lv.3|r"
 -- 提示工具 - 扩展
 Ubertip = "传说中这件仙器在后期能将秒杀你的伤害瞬间瓦解！|n|n|cffffcc00魔法上限+400|n受到的魔法伤害-40%|n每12秒阻挡一次魔法.|n增加40%技能伤害|n复活后魔法恢复400（不可叠加）|n|r|cff8080ff点击使用强大的技能|r|n|cffff00ff仙界英雄专属技能：仙露之吻|r"
 -- 技能
-abilList = "A07U,AImb,A050,A058"
+abilList = "A07U,AImb,A050"
 -- 物品分类
 class = "Permanent"
 -- 颜色值(绿)
@@ -4050,7 +4050,7 @@ Tip = "|cff808080【仙】法魂Lv.0|r"
 -- 提示工具 - 扩展
 Ubertip = "传说中这件仙器在后期能将秒杀你的伤害瞬间瓦解！|n|n|cffffcc00魔法上限+100|n受到的魔法伤害-10%|n每20秒阻挡一次魔法.|n增加10%技能伤害|n复活后魔法恢复100（不可叠加）|n|r|cff8080ff点击使用强大的技能|r"
 -- 技能
-abilList = "A09E,AImz,AIsr,ANss"
+abilList = "A09E,AImz,AIsr"
 -- 颜色值(蓝)
 colorB = 102
 -- 颜色值(绿)
@@ -4395,7 +4395,7 @@ Tip = "|cff00ff80【仙】法魂Lv.2|r"
 -- 提示工具 - 扩展
 Ubertip = "传说中这件仙器在后期能将秒杀你的伤害瞬间瓦解！|n|n|cffffcc00魔法上限+300|n受到的魔法伤害-30%|n每15秒阻挡一次魔法.|n增加30%技能伤害|n复活后魔法恢复300（不可叠加）|n|r|cff8080ff点击使用强大的技能|r"
 -- 技能
-abilList = "A07E,AIbm,A07B,A07A"
+abilList = "A07E,AIbm,A07B"
 -- 颜色值(蓝)
 colorB = 102
 -- 颜色值(红)
@@ -4503,7 +4503,7 @@ Tip = "|cffff0000【仙】法魂Lv.Max|r"
 -- 提示工具 - 扩展
 Ubertip = "传说中这件仙器在后期能将秒杀你的伤害瞬间瓦解！|n|n|cffffcc00魔法上限+1000|n受到的魔法伤害-80%|n每5秒阻挡一次魔法.|n增加70%技能伤害|n复活后魔法恢复1000（不可叠加）|n|r|cff8080ff点击使用强大的技能|r|n|cffff00ff仙界英雄专属技能：仙露之吻|r"
 -- 技能
-abilList = "A0BO,A0BR,A09G,A05B"
+abilList = "A0BO,A0BR,A09G"
 -- 物品分类
 class = "Permanent"
 -- 颜色值(蓝)
@@ -4750,7 +4750,7 @@ Tip = "|cffff99cc【超仙】战法双魂|r"
 -- 提示工具 - 扩展
 Ubertip = "洪荒宇宙之中，如此圣品降世极其罕见。|n|cffff99cc【仙】|r法魂+战魂|cffffff00的所有效果|n仙界英雄专属技能：仙尘祝福|n|r|cffffcc00增加100%技能伤害、150W攻击|n杀死敌人获得8点全属性|n受到伤害回复不超过伤害值的50000点HP|r"
 -- 技能
-abilList = "A0D8,A0BR,A09G,A0BQ"
+abilList = "A0D8,A0BR,A09G"
 -- 颜色值(蓝)
 colorB = 0
 -- 颜色值(绿)
@@ -5072,7 +5072,7 @@ Tip = "|cffff8040【仙】法魂Lv.5|r"
 -- 提示工具 - 扩展
 Ubertip = "传说中这件仙器在后期能将秒杀你的伤害瞬间瓦解！|n|n|cffffcc00魔法上限+600|n受到的魔法伤害-60%|n每7秒阻挡一次魔法.|n增加60%技能伤害|n复活后魔法恢复700（不可叠加）|n|r|cff8080ff点击使用强大的技能|r|n|cffff00ff仙界英雄专属技能：仙露之吻|r"
 -- 技能
-abilList = "A07Y,A05C,A056,A05A"
+abilList = "A07Y,A05C,A056"
 -- 物品分类
 class = "Permanent"
 -- 颜色值(蓝)
@@ -5651,7 +5651,7 @@ Tip = "|cffff00ff【仙】法魂Lv.4|r"
 -- 提示工具 - 扩展
 Ubertip = "传说中这件仙器在后期能将秒杀你的伤害瞬间瓦解！|n|n|cffffcc00魔法上限+500|n受到的魔法伤害-50%|n每10秒阻挡一次魔法.|n增加50%技能伤害|n复活后魔法恢复600（不可叠加）|n|r|cff8080ff点击使用强大的技能|r|n|cffff00ff仙界英雄专属技能：仙露之吻|r"
 -- 技能
-abilList = "A07W,AImv,A052,A059"
+abilList = "A07W,AImv,A052"
 -- 物品分类
 class = "Permanent"
 -- 颜色值(绿)
@@ -6834,7 +6834,7 @@ Tip = "【仙】法魂Lv.1"
 -- 提示工具 - 扩展
 Ubertip = "传说中这件仙器在后期能将秒杀你的伤害瞬间瓦解！|n|n|cffffcc00魔法上限+200|n受到的魔法伤害-20%|n每18秒阻挡一次魔法.|n增加20%技能伤害|n复活后魔法恢复200（不可叠加）|n|r|cff8080ff点击使用强大的技能|r"
 -- 技能
-abilList = "A06V,AI2m,A06T,A06S"
+abilList = "A06V,AI2m,A06T"
 -- CD间隔组
 cooldownID = "A06V"
 -- 黄金消耗
