--- a/file/war3map.w3u.ini
+++ b/file/war3map.w3u.ini
@@ -3991,15 +3991,15 @@ _parent = "nanb"
 -- 从属等价物
 DependencyOr = ""
 -- 生命最大值
-HP = 300000000
+HP = 500000000
 -- 名字
 Name = "【虚】强化石"
 -- 普通
-abilList = "A094,Amgl,A04E"
+abilList = "AB01"
 -- 攻击 1 - 攻击类型
 atkType1 = "chaos"
 -- 默认主动技能
-auto = "A094"
+auto = ""
 -- 黄金奖励 - 骰子数量
 bountydice = 0
 -- 黄金奖励 - 基础值
@@ -4011,11 +4011,11 @@ cool1 = 1.0000
 -- 基础护甲
 def = 1300.0000
 -- 攻击 1 - 基础伤害
-dmgplus1 = 25000000
+dmgplus1 = 150000000
 -- 占用人口
 fused = 0
 -- 等级
-level = 145
+level = 90
 -- 魔法初始数量
 mana0 = 2000
 -- 魔法最大值
@@ -4023,7 +4023,7 @@ manaN = 2000
 -- 单位附加值
 points = 1
 -- 魔法回复
-regenMana = 10.0000
+regenMana = 50.0000
 -- 攻击 1 - 伤害骰子面数
 sides1 = 15000000
 
@@ -4073,15 +4073,15 @@ upgrades = "R004,R003,R000,R005"
 [nane]
 _parent = "nane"
 -- 生命最大值
-HP = 300000000
+HP = 500000000
 -- 名字
 Name = "【虚】诅咒石"
 -- 普通
-abilList = "A094,Amgl,A04E"
+abilList = "AB01"
 -- 攻击 1 - 攻击类型
 atkType1 = "chaos"
 -- 默认主动技能
-auto = "A094"
+auto = ""
 -- 黄金奖励 - 骰子数量
 bountydice = 0
 -- 黄金奖励 - 基础值
@@ -4093,11 +4093,11 @@ cool1 = 1.0000
 -- 基础护甲
 def = 1000.0000
 -- 攻击 1 - 基础伤害
-dmgplus1 = 25000000
+dmgplus1 = 150000000
 -- 占用人口
 fused = 0
 -- 等级
-level = 145
+level = 90
 -- 魔法初始数量
 mana0 = 2000
 -- 魔法最大值
@@ -4105,24 +4105,24 @@ manaN = 2000
 -- 单位附加值
 points = 1
 -- 魔法回复
-regenMana = 10.0000
+regenMana = 50.0000
 -- 攻击 1 - 伤害骰子面数
-sides1 = 15000000
+sides1 = 1
 
 [nanm]
 _parent = "nanm"
 -- 从属等价物
 DependencyOr = ""
 -- 生命最大值
-HP = 300000000
+HP = 500000000
 -- 名字
 Name = "【虚】祝福石"
 -- 普通
-abilList = "A094,Amgl,A04E"
+abilList = "AB01"
 -- 攻击 1 - 攻击类型
 atkType1 = "chaos"
 -- 默认主动技能
-auto = "A094"
+auto = ""
 -- 黄金奖励 - 骰子数量
 bountydice = 0
 -- 黄金奖励 - 基础值
@@ -4134,21 +4134,23 @@ cool1 = 1.0000
 -- 基础护甲
 def = 1300.0000
 -- 攻击 1 - 基础伤害
-dmgplus1 = 25000000
+dmgplus1 = 150000000
 -- 占用人口
 fused = 0
 -- 等级
-level = 145
+level = 100
 -- 魔法初始数量
 mana0 = 2000
 -- 魔法最大值
 manaN = 2000
 -- 单位附加值
 points = 1
+-- 魔法回复
+regenMana = 50.0000
 -- 生命回复
 regenHP = 0.0000
 -- 攻击 1 - 伤害骰子面数
-sides1 = 15000000
+sides1 = 1
 
 [nano]
 _parent = "nano"
@@ -6008,15 +6010,15 @@ upgrades = "R004,R003,R000,R005"
 [nhyc]
 _parent = "nhyc"
 -- 生命最大值
-HP = 200000000
+HP = 500000000
 -- 名字
 Name = "【虚】+5宝石"
 -- 普通
-abilList = "A0AA,Amgl,A04E"
+abilList = "AB01"
 -- 攻击 1 - 攻击类型
 atkType1 = "chaos"
 -- 默认主动技能
-auto = "A0AA"
+auto = ""
 -- 黄金奖励 - 骰子数量
 bountydice = 0
 -- 黄金奖励 - 基础值
@@ -6028,7 +6030,7 @@ cool1 = 1.0000
 -- 基础护甲
 def = 1500.0000
 -- 攻击 1 - 基础伤害
-dmgplus1 = 16000000
+dmgplus1 = 150000000
 -- 占用人口
 fused = 0
 -- 等级
@@ -6042,7 +6044,7 @@ points = 1
 -- 攻击 1 - 攻击范围
 rangeN1 = 600
 -- 魔法回复
-regenMana = 20.0000
+regenMana = 50.0000
 -- 攻击 1 - 伤害骰子面数
 sides1 = 1
 -- 攻击 1 - 目标允许
@@ -6942,7 +6944,7 @@ targs1 = "debris,ground,structure,air,ward,item"
 [nmmu]
 _parent = "nmmu"
 -- 生命最大值
-HP = 600000000
+HP = 20000000
 -- 攻击 1 - 投射物图像
 "Missileart:1" = "Abilities\\Weapons\\NecromancerMissile\\NecromancerMissile.mdl"
 -- 攻击 1 - 射弹速率
@@ -6970,7 +6972,7 @@ cool1 = 1.0000
 -- 基础护甲
 def = 3000.0000
 -- 攻击 1 - 基础伤害
-dmgplus1 = 200000000
+dmgplus1 = 900000000
 -- 占用人口
 fused = 0
 -- 等级
@@ -6988,13 +6990,16 @@ rangeN1 = 600
 -- 生命回复
 regenHP = 0.0000
 -- 魔法回复
-regenMana = 50.0000
+regenMana = 90.0000
 -- 攻击 1 - 伤害骰子面数
 sides1 = 1
 -- 攻击 1 - 目标允许
 targs1 = "debris,ground,structure,air,ward,item"
 -- 攻击 1 - 武器类型
 weapTp1 = "missile"
+-- 使用科技
+upgrades = "R00I"
+
 
 [nmr5]
 _parent = "nmr5"
@@ -7220,7 +7225,7 @@ _parent = "nmyr"
 -- 从属等价物
 DependencyOr = ""
 -- 生命最大值
-HP = 60000000
+HP = 80000000
 -- 攻击 1 - 投射物图像
 "Missileart:1" = "Abilities\\Weapons\\NecromancerMissile\\NecromancerMissile.mdl"
 -- 攻击 1 - 射弹速率
@@ -7228,11 +7233,11 @@ HP = 60000000
 -- 名字
 Name = "【虚】+2宝石"
 -- 普通
-abilList = "A0CQ,Amgl,A04E"
+abilList = "AB01"
 -- 攻击 1 - 攻击类型
 atkType1 = "chaos"
 -- 默认主动技能
-auto = "A0CQ"
+auto = ""
 -- 黄金奖励 - 骰子数量
 bountydice = 0
 -- 黄金奖励 - 基础值
@@ -7246,7 +7251,7 @@ def = 800.0000
 -- 防御升级奖励
 defUp = 0.0000
 -- 攻击 1 - 基础伤害
-dmgplus1 = 2000000
+dmgplus1 = 10000000
 -- 占用人口
 fused = 0
 -- 等级
@@ -7262,7 +7267,7 @@ rangeN1 = 600
 -- 生命回复
 regenHP = 0.0000
 -- 魔法回复
-regenMana = 6.0000
+regenMana = 25.0000
 -- 生命回复类型
 regenType = ""
 -- 攻击 1 - 目标允许
@@ -7369,11 +7374,11 @@ Hotkey = ""
 -- 名字
 Name = "【虚】+1宝石"
 -- 普通
-abilList = "A0BK,Amgl,A04E"
+abilList = "AB01"
 -- 攻击 1 - 攻击类型
 atkType1 = "chaos"
 -- 默认主动技能
-auto = "A0BK"
+auto = ""
 -- 黄金奖励 - 骰子数量
 bountydice = 0
 -- 黄金奖励 - 基础值
@@ -7387,7 +7392,7 @@ def = 600.0000
 -- 防御升级奖励
 defUp = 0.0000
 -- 攻击 1 - 基础伤害
-dmgplus1 = 1000000
+dmgplus1 = 5000000
 -- 占用人口
 fused = 0
 -- 等级
@@ -7403,7 +7408,7 @@ rangeN1 = 600
 -- 生命回复
 regenHP = 0.0000
 -- 魔法回复
-regenMana = 5.0000
+regenMana = 20.0000
 -- 攻击 1 - 伤害骰子面数
 sides1 = 1
 -- 攻击 1 - 目标允许
@@ -7420,7 +7425,7 @@ _parent = "nnrg"
 -- 从属等价物
 DependencyOr = ""
 -- 生命最大值
-HP = 280000000
+HP = 800000000
 -- 攻击 1 - 投射物图像
 "Missileart:1" = "Abilities\\Weapons\\NecromancerMissile\\NecromancerMissile.mdl"
 -- 攻击 1 - 射弹速率
@@ -7428,9 +7433,9 @@ HP = 280000000
 -- 名字
 Name = "【虚】+6宝石"
 -- 普通
-abilList = "A0B1,Amgl,A04E"
+abilList = "AB01"
 -- 默认主动技能
-auto = "A0B1"
+auto = ""
 -- 黄金奖励 - 骰子数量
 bountydice = 0
 -- 黄金奖励 - 基础值
@@ -7442,7 +7447,7 @@ cool1 = 1.0000
 -- 基础护甲
 def = 2000.0000
 -- 攻击 1 - 基础伤害
-dmgplus1 = 320000000
+dmgplus1 = 300000000
 -- 占用人口
 fused = 0
 -- 等级
@@ -7469,15 +7474,15 @@ weapTp1 = "missile"
 [nnsw]
 _parent = "nnsw"
 -- 生命最大值
-HP = 100000000
+HP = 200000000
 -- 名字
 Name = "【虚】+3宝石"
 -- 普通
-abilList = "A093,Amgl,A04E"
+abilList = "AB01"
 -- 攻击 1 - 攻击类型
 atkType1 = "chaos"
 -- 默认主动技能
-auto = "A093"
+auto = ""
 -- 黄金奖励 - 骰子数量
 bountydice = 0
 -- 黄金奖励 - 基础值
@@ -7493,7 +7498,7 @@ defType = "large"
 -- 防御升级奖励
 defUp = 0.0000
 -- 攻击 1 - 基础伤害
-dmgplus1 = 4000000
+dmgplus1 = 20000000
 -- 占用人口
 fused = 0
 -- 等级
@@ -7505,7 +7510,7 @@ points = 1
 -- 生命回复
 regenHP = 0.0000
 -- 魔法回复
-regenMana = 10.0000
+regenMana = 30.0000
 -- 攻击 1 - 伤害骰子面数
 sides1 = 1
 -- 使用科技
@@ -7952,7 +7957,7 @@ targs1 = "ground,structure,debris,item,ward,air"
 [nplb]
 _parent = "nplb"
 -- 生命最大值
-HP = 500000000
+HP = 1000000000
 -- 攻击 1 - 投射物图像
 "Missileart:1" = "Abilities\\Weapons\\NecromancerMissile\\NecromancerMissile.mdl"
 -- 攻击 1 - 射弹速率
@@ -7960,7 +7965,7 @@ HP = 500000000
 -- 名字
 Name = "【虚】+7宝石"
 -- 普通
-abilList = "A0BL,Amgl,A04E"
+abilList = "AB01"
 -- 主动攻击范围
 acquire = 600.0000
 -- 攻击 1 - 攻击类型
@@ -7980,7 +7985,7 @@ cool1 = 1.0000
 -- 基础护甲
 def = 2100.0000
 -- 攻击 1 - 基础伤害
-dmgplus1 = 64000000
+dmgplus1 = 450000000
 -- 占用人口
 fused = 0
 -- 等级
@@ -7996,7 +8001,7 @@ race = "naga"
 -- 攻击 1 - 攻击范围
 rangeN1 = 500
 -- 魔法回复
-regenMana = 50.0000
+regenMana = 60.0000
 -- 攻击 1 - 伤害骰子面数
 sides1 = 1
 -- 攻击 1 - 目标允许
@@ -8567,15 +8572,15 @@ _parent = "nsnp"
 -- 从属等价物
 DependencyOr = ""
 -- 生命最大值
-HP = 150000000
+HP = 300000000
 -- 名字
 Name = "【虚】+4宝石"
 -- 普通
-abilList = "A094,Amgl,A04E"
+abilList = "AB01"
 -- 攻击 1 - 攻击类型
 atkType1 = "chaos"
 -- 默认主动技能
-auto = "A094"
+auto = ""
 -- 黄金奖励 - 骰子数量
 bountydice = 0
 -- 黄金奖励 - 基础值
@@ -8591,7 +8596,7 @@ defType = "large"
 -- 防御升级奖励
 defUp = 0.0000
 -- 攻击 1 - 基础伤害
-dmgplus1 = 8000000
+dmgplus1 = 40000000
 -- 占用人口
 fused = 0
 -- 等级
@@ -8607,7 +8612,7 @@ rangeN1 = 600
 -- 生命回复
 regenHP = 0.0000
 -- 魔法回复
-regenMana = 5.0000
+regenMana = 40.0000
 -- 攻击 1 - 伤害骰子面数
 sides1 = 1
 -- 使用科技
@@ -9219,7 +9224,7 @@ targs1 = "debris,ground,structure,air,ward,item"
 [ntrv]
 _parent = "ntrv"
 -- 生命最大值
-HP = 550000000
+HP = 15000000
 -- 攻击 1 - 投射物图像
 "Missileart:1" = "Abilities\\Weapons\\NecromancerMissile\\NecromancerMissile.mdl"
 -- 攻击 1 - 射弹速率
@@ -9227,13 +9232,13 @@ HP = 550000000
 -- 名字
 Name = "【虚】+8宝石"
 -- 普通
-abilList = "A0CH,Amgl,A04E"
+abilList = "AB01"
 -- 主动攻击范围
 acquire = 600.0000
 -- 攻击 1 - 攻击类型
 atkType1 = "chaos"
 -- 默认主动技能
-auto = "A0CH"
+auto = ""
 -- 黄金奖励 - 骰子数量
 bountydice = 0
 -- 黄金奖励 - 基础值
@@ -9247,7 +9252,7 @@ cool1 = 1.0000
 -- 基础护甲
 def = 2500.0000
 -- 攻击 1 - 基础伤害
-dmgplus1 = 100000000
+dmgplus1 = 600000000
 -- 占用人口
 fused = 0
 -- 等级
@@ -9274,6 +9279,8 @@ targs1 = "debris,ground,structure,air,ward,item"
 type = ""
 -- 攻击 1 - 武器类型
 weapTp1 = "missile"
+-- 使用科技
+upgrades = "R00I"
 
 [ntx2]
 _parent = "ntx2"
@@ -16065,3 +16072,160 @@ abilList = "Avul,Aloc"
 file = "Abilities\\Weapons\\AvengerMissile\\AvengerMissile.mdl"
 -- 模型缩放
 modelScale = 0.6000
+
+
+[hs00]
+_parent = "hpea"
+-- 可建造建筑
+Builds = ""
+-- 生命最大值
+HP = 1000000000
+-- 名字
+Name = "手里剑"
+-- 特殊效果
+Specialart = ""
+-- 普通
+abilList = "Aloc"
+-- 颜色值(蓝)
+blue = 0
+-- 可以逃跑
+canFlee = 0
+-- 运输尺寸
+cargoSize = 0
+-- 碰撞体积
+collision = 0.0000
+-- 死亡时间(秒)
+death = 2.0000
+-- 模型文件
+file = "Abilities\\Spells\\Orc\\Shockwave\\ShockwaveMissile.mdl"
+-- 占用人口
+fused = 0
+-- 颜色值(绿)
+green = 0
+-- 隐藏小地图显示
+hideOnMinimap = 1
+-- 魔法初始数量
+mana0 = 50000
+-- 魔法最大值
+manaN = 100000
+-- X轴最大旋转角度(弧度)
+maxPitch = 25.0000
+-- Y轴最大旋转角度(弧度)
+maxRoll = 25.0000
+-- 模型缩放
+modelScale = 2.0000
+-- 最小高度
+moveFloor = 80.0000
+-- 高度
+moveHeight = 80.0000
+-- 类型
+movetp = "hover"
+-- 视野范围(夜晚)
+nsight = 500
+-- 单位附加值
+points = 0
+-- 生命回复
+regenHP = 0.0000
+-- 阴影图像 - 高度
+shadowH = 0.0000
+-- 阴影图像 - 宽度
+shadowW = 0.0000
+-- 阴影图像 - X轴偏移
+shadowX = 0.0000
+-- 阴影图像 - Y轴偏移
+shadowY = 0.0000
+-- 视野范围(白天)
+sight = 500
+-- 基础速度
+spd = 100
+-- 最大库存量
+stockMax = 0
+-- 雇佣时间间隔
+stockRegen = 0
+-- 单位类别
+type = "standon"
+-- 阴影图像(单位)
+unitShadow = ""
+-- 使用科技
+upgrades = ""
+-- 允许攻击模式
+weapsOn = 0
+
+
+[hs01]
+_parent = "hpea"
+-- 可建造建筑
+Builds = ""
+-- 生命最大值
+HP = 1000000000
+-- 名字
+Name = "预瞄"
+-- 特殊效果
+Specialart = ""
+-- 普通
+abilList = "Aloc"
+-- 颜色值(蓝)
+blue = 0
+-- 可以逃跑
+canFlee = 0
+-- 运输尺寸
+cargoSize = 0
+-- 碰撞体积
+collision = 0.0000
+-- 死亡时间(秒)
+death = 2.0000
+-- 模型文件
+file = "Abilities\\Spells\\Orc\\Shockwave\\ShockwaveMissile.mdl"
+-- 占用人口
+fused = 0
+-- 颜色值(绿)
+green = 0
+-- 隐藏小地图显示
+hideOnMinimap = 1
+-- 魔法初始数量
+mana0 = 50000
+-- 魔法最大值
+manaN = 100000
+-- X轴最大旋转角度(弧度)
+maxPitch = 25.0000
+-- Y轴最大旋转角度(弧度)
+maxRoll = 25.0000
+-- 模型缩放
+modelScale = 2.0000
+-- 最小高度
+moveFloor = 80.0000
+-- 高度
+moveHeight = 80.0000
+-- 类型
+movetp = "hover"
+-- 视野范围(夜晚)
+nsight = 500
+-- 单位附加值
+points = 0
+-- 生命回复
+regenHP = 0.0000
+-- 阴影图像 - 高度
+shadowH = 0.0000
+-- 阴影图像 - 宽度
+shadowW = 0.0000
+-- 阴影图像 - X轴偏移
+shadowX = 0.0000
+-- 阴影图像 - Y轴偏移
+shadowY = 0.0000
+-- 视野范围(白天)
+sight = 500
+-- 基础速度
+spd = 100
+-- 最大库存量
+stockMax = 0
+-- 雇佣时间间隔
+stockRegen = 0
+-- 单位类别
+type = "standon"
+-- 阴影图像(单位)
+unitShadow = ""
+-- 使用科技
+upgrades = ""
+-- 允许攻击模式
+weapsOn = 0
+
