new arena file complete~!~!~!~!

--- a/file/war3map.w3a.ini
+++ b/file/war3map.w3a.ini
@@ -8257,11 +8257,11 @@ _parent = "Arsw"
 -- 魔法施放时间间隔
 Cool = 6.0000
 -- 魔法消耗
-Cost = 150
+Cost = 0
 -- 召唤单位数量
 DataA = 10
 -- 持续时间 - 普通
-Dur = 30.0000
+Dur = 30k.0000
 -- 编辑器后缀
 EditorSuffix = "(美杜莎)"
 -- 持续时间 - 英雄
@@ -23225,13 +23225,13 @@ targs = "enemies,ground,air,organic,neutral"
 [A0EV]
 _parent = "AIil"
 -- 施加伤害(%)
-DataA = 10.0000
+DataA = 100.0000
 -- 受到伤害倍数
 DataB = 0.0000
 -- 持续时间 - 普通
 Dur = 5.0000
 -- 编辑器后缀
-EditorSuffix = "(1000%攻击 0%伤害)"
+EditorSuffix = "(10000%攻击 1%伤害)"
 -- 持续时间 - 英雄
 HeroDur = 5.0000
 -- 名字
@@ -24894,4 +24894,44 @@ targs = {
 "air,ground,enemy,neutral,organic",
 "air,ground,enemy,neutral,organic",
 "air,ground,enemy,neutral,organic",
+}
+
+
+[AL01]
+_parent = "ANrf"
+-- 影响区域
+Area = {300.0000, 300.0000, 300.0000, 300.0000, 300.0000, 300.0000, 300.0000}
+-- 魔法施放时间
+Cast = {0.5000, 0.5000, 0.5000, 0.5000, 0.5000, 0.5000, 0.5000}
+-- 魔法施放时间间隔
+Cool = {0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000}
+-- 魔法消耗
+Cost = {0, 0, 0, 0, 0, 0, 0}
+-- 波次数量
+DataA = {3, 3, 3, 3, 3, 3, 3}
+-- 每波伤害
+DataB = {1500000.0000, 3000000.0000, 4500000.0000, 6000000.0000, 7500000.0000, 9000000.0000, 10500000.0000}
+-- 碎片数量
+DataC = {10, 10, 10, 10, 10, 10, 10}
+-- 建筑伤害参数(%)
+DataD = {0.0100, 0.0100, 0.0100, 0.0100, 0.0100, 0.0100, 0.0100}
+-- 每秒伤害
+DataE = {1500000.0000, 3000000.0000, 4500000.0000, 6000000.0000, 7500000.0000, 9000000.0000, 10500000.0000}
+-- 每波最大伤害
+DataF = {1000000000.0000, 1000000000.0000, 1000000000.0000, 1000000000.0000, 1000000000.0000, 1000000000.0000, 1000000000.0000}
+-- 编辑器后缀
+EditorSuffix = "（护法）"
+-- 英雄技能
+hero = 0
+-- 等级
+levels = 7
+-- 目标允许
+targs = {
+"ground,enemy,neutral,organic,air",
+"ground,enemy,neutral,organic,air",
+"ground,enemy,neutral,organic,air",
+"ground,enemy,neutral,organic,air",
+"ground,enemy,neutral,organic,air",
+"ground,enemy,neutral,organic,air",
+"ground,enemy,neutral,organic,air",
 }
