--- a/file/war3map.w3a.ini
+++ b/file/war3map.w3a.ini
@@ -24935,3 +24935,116 @@ targs = {
 "ground,enemy,neutral,organic,air",
 "ground,enemy,neutral,organic,air",
 }
+
+[AL02]
+_parent = "ANrf"
+-- 影响区域
+Area = {0.0000, 0.0000, 0.0000}
+-- 图标 - 普通
+Art = "ReplaceableTextures\\CommandButtons\\BTNShadowStrike.blp"
+-- 魔法效果
+BuffID = {
+"BEsh",
+"BEsh",
+"BEsh",
+}
+-- 按钮位置 - 普通 (X)
+"Buttonpos:1" = 2
+-- 按钮位置 - 普通 (Y)
+"Buttonpos:2" = 2
+-- 魔法施放时间
+Cast = {3.0000, 3.0000, 3.0000}
+-- 效果 - 施法者 - 附加数量
+Casterattachcount = 0
+-- 魔法施放时间间隔
+Cool = {8.0000, 8.0000, 8.0000}
+-- 魔法消耗
+Cost = {75, 75, 75}
+-- 持续伤害
+DataA = {10.0000, 30.0000, 45.0000}
+-- 移动速度减少
+DataB = {0.5000, 0.5000, 0.5000}
+-- 攻击速度减少
+DataC = {0.0000, 0.0000, 0.0000}
+-- 速度衰减幅度
+DataD = {3.0000, 3.0000, 3.0000}
+-- 初始伤害
+DataE = {75.0000, 150.0000, 225.0000}
+-- 持续时间 - 普通
+Dur = {15.1000, 15.1000, 15.1000}
+-- 区域持续效果
+EfctID = {
+"",
+"",
+"",
+}
+-- 持续时间 - 英雄
+HeroDur = {15.1000, 15.1000, 15.1000}
+-- 热键 - 普通
+Hotkey = "D"
+-- 效果 - 射弹自导允许
+MissileHoming = 1
+-- 效果 - 射弹弧度
+Missilearc = 0.0000
+-- 效果 - 投射物图像
+Missileart = "Abilities\\Spells\\NightElf\\shadowstrike\\ShadowStrikeMissile.mdl"
+-- 效果 - 射弹速度
+Missilespeed = 1200
+-- 名字
+Name = "暗影突袭"
+-- 命令串 - 使用/打开
+Order = "shadowstrike"
+-- 图标 - 学习
+ResearchArt = "ReplaceableTextures\\CommandButtons\\BTNShadowStrike.blp"
+-- 按钮位置 - 研究 (X)
+"Researchbuttonpos:1" = 2
+-- 按钮位置 - 研究 (Y)
+"Researchbuttonpos:2" = 0
+-- 热键 - 学习
+Researchhotkey = "D"
+-- 提示工具 - 学习
+Researchtip = "学习暗影突袭(|cffffcc00D|r) - [|cffffcc00等级 %d|r]"
+-- 提示工具 - 学习 - 扩展
+Researchubertip = "投掷出一把毒性的匕首，能对敌方的地面单位造成巨大的伤害。最初造成很大的伤害，随后每秒造成一定的伤害。匕首上的毒素能在短时间内减慢目标单位的攻击速度和移动速度。|n|n|cffffcc00等级 1|r - <AEsh,DataE1> 点初始伤害，<AEsh,DataA1> 点持续伤害。 |n|cffffcc00等级 2|r - <AEsh,DataE2>点初始伤害，<AEsh,DataA2>点持续伤害。 |n|cffffcc00等级 3|r - <AEsh,DataE3>点初始伤害，<AEsh,DataA3>点持续伤害。."
+-- 施法距离
+Rng = {300.0000, 300.0000, 300.0000}
+-- 效果 - 目标 - 附加数量
+Targetattachcount = 0
+-- 提示工具 - 普通
+Tip = {
+"暗影突袭(|cffffcc00D|r) - [|cffffcc00等级 1|r]",
+"暗影突袭(|cffffcc00D|r) - [|cffffcc00等级 2|r]",
+"暗影突袭(|cffffcc00D|r) - [|cffffcc00等级 3|r]",
+}
+-- 提示工具 - 普通 - 扩展
+Ubertip = {
+"投掷出一把毒性的匕首，能对敌方的地面单位造成巨大的伤害。最初造成<AEsh,DataE1>点的伤害，随后每<AEsh,Cast1>秒造成<AEsh,DataA1>点的伤害，持续<AEsh,Dur1>秒。匕首上的毒素能在短时间内减慢目标单位的攻击速度和移动速度。",
+"投掷出一把毒性的匕首，能对敌方的地面单位造成巨大的伤害。最初造成<AEsh,DataE2>点的伤害，随后每<AEsh,Cast2>秒造成<AEsh,DataA2>点的伤害，持续<AEsh,Dur2>秒。匕首上的毒素能在短时间内减慢目标单位的攻击速度和移动速度。",
+"投掷出一把毒性的匕首，能对敌方的地面单位造成巨大的伤害。最初造成<AEsh,DataE3>点的伤害，随后每<AEsh,Cast3>秒造成<AEsh,DataA3>点的伤害，持续<AEsh,Dur3>秒。匕首上的毒素能在短时间内减慢目标单位的攻击速度和移动速度。",
+}
+-- 按钮位置 - 关闭 (X)
+"UnButtonpos:1" = 0
+-- 按钮位置 - 关闭 (Y)
+"UnButtonpos:2" = 0
+-- 检查等价所属
+checkDep = 1
+-- 英雄技能
+hero = 1
+-- 物品技能
+item = 0
+-- 跳级要求
+levelSkip = 0
+-- 等级
+levels = 3
+-- 魔法偷取优先权
+priority = 0
+-- 种族
+race = "nightelf"
+-- 等级要求
+reqLevel = 1
+-- 目标允许
+targs = {
+"ground,air,enemy,neutral,organic",
+"ground,air,enemy,neutral,organic",
+"ground,air,enemy,neutral,organic",
+}
