add the new file.

--- a/file/war3map.w3h.ini
+++ b/file/war3map.w3h.ini
@@ -41,17 +41,6 @@ Bufftip = "无敌的"
 -- 工具提示 - 扩展
 Buffubertip = "该单位是无敌的。"
 
-[BHtc]
-_parent = "BHtc"
--- 图标
-Buffart = "ReplaceableTextures\\CommandButtons\\BTNBlizzard.blp"
--- 工具提示
-Bufftip = "|cFFFF3333冰封の诅咒|r"
--- 工具提示 - 扩展
-Buffubertip = "该单位受到了|cFFFF3333冰|r|cFFD43555封|r|cFFAA3877の|r|cFF803A99诅|r|cFF553CBB咒|r的攻击，其移动速度和攻击速度都会减慢。"
--- 效果 - 目标
-TargetArt = "Abilities\\Spells\\Other\\Drain\\ManaDrainCaster.mdl"
-
 [BIcb]
 _parent = "BIcb"
 -- 工具提示
@@ -66,15 +55,6 @@ Buffart = "ReplaceableTextures\\CommandButtons\\BTNEngineeringUpgrade.blp"
 -- 工具提示
 Bufftip = "被复制的单位"
 
-[BNcs]
-_parent = "BNcs"
--- 图标
-Buffart = "ReplaceableTextures\\CommandButtons\\BTNCloakOfFlames.blp"
--- 工具提示
-Bufftip = "|cFF66CC00先祖庇佑|r"
--- 工具提示 - 扩展
-Buffubertip = "被晕了、"
-
 [BNdh]
 _parent = "BNdh"
 -- 图标
@@ -83,15 +63,6 @@ Buffart = "ReplaceableTextures\\CommandButtons\\BTNHowlOfTerror.blp"
 Bufftip = "|cffff0000沙葬风暴|r"
 -- 工具提示 - 扩展
 Buffubertip = "该单位遭到了|cffff0000沙葬风暴|r的攻击，并有80%的概率不能击中其他单位。"
-
-[BNhs]
-_parent = "BNhs"
--- 图标
-Buffart = "ReplaceableTextures\\CommandButtons\\BTNResurrection.blp"
--- 工具提示
-Bufftip = "|cFF66CC00治疗丶朋友|r"
--- 工具提示 - 扩展
-Buffubertip = "这个单位正在接受|cFF66CC00治|r|cFF80B211疗|r|cFF999922丶|r|cFFB28033朋|r|cFFCC6644友|r的治疗。"
 
 [BNpi]
 _parent = "BNpi"
@@ -700,6 +671,15 @@ Bufftip = "破击光环"
 -- 工具提示 - 扩展
 Buffubertip = "该单位处在破击光环的作用之下，因此其攻击力削弱了。"
 
+[B01C]
+_parent = "BNrd"
+-- 图标
+Buffart = "ReplaceableTextures\\PassiveButtons\\PASBTNElunesBlessing.blp"
+-- 工具提示
+Bufftip = "流星雨"
+-- 工具提示 - 扩展
+Buffubertip = "该单位受到流星雨的攻击，它将不断受到伤害。"
+
 [X000]
 _parent = "XNvc"
 -- 名字(编辑器)
@@ -731,3 +711,10 @@ _parent = "XHfs"
 EditorName = "烈焰风暴(效果2222)"
 -- 效果 - 点目标
 EffectArt = "Abilities\\Spells\\Other\\Doom\\DoomDeath.mdl"
+
+[X004]
+_parent = "XErf"
+-- 名字(编辑器)
+EditorName = "流星雨(效果)"
+-- 效果 - 点目标
+EffectArt = "Abilities\\Spells\\NightElf\\Starfall\\StarfallTarget.mdl"
