--- a/file/war3map.w3t.ini
+++ b/file/war3map.w3t.ini
@@ -345,7 +345,7 @@ _parent = "bspd"
 -- 界面图标
 Art = "ReplaceableTextures\\CommandButtons\\BTNbinglian.blp"
 -- 说明
-Description = "人界中最寒冷的植物，而后成精祸害百姓，但终被一代人王收服，制成该究极装备。|n|cffff9900减少所受的80%的魔法伤害|n增加250000属性|n增加75%的技能伤害|n增加150W攻击|n增加25%的造成伤害|r|n|cffffff00冰锥刺杀 - 攻击有5%的几率击晕目标0.5s，并造成额外无视防御3000W伤害。|r"
+Description = "人界中最寒冷的植物，而后成精祸害百姓，但终被一代人王收服，制成该究极装备。|n|cffff9900减少所受的60%的魔法伤害|n增加200000属性|n增加75%的技能伤害|n增加150W攻击|n增加25%的造成伤害|r|n|cffffff00冰锥刺杀 - 攻击有5%的几率击晕目标0.5s，并造成额外无视防御3000W伤害。|r"
 -- 热键
 Hotkey = ""
 -- 名字
@@ -353,9 +353,9 @@ Name = "|cff0000ff【人】魅心冰莲|r"
 -- 提示工具 - 基础
 Tip = "|cff0000ff【人】魅心冰莲|r"
 -- 提示工具 - 扩展
-Ubertip = "人界中最寒冷的植物，而后成精祸害百姓，但终被一代人王收服，制成该究极装备。|n|cffff9900减少所受的80%的魔法伤害|n增加250000属性|n增加75%的技能伤害|n增加150W攻击|n增加25%的造成伤害|r|n|cffffff00冰锥刺杀 - 攻击有5%的几率击晕目标0.5s，并造成额外无视防御3000W伤害。|r"
+Ubertip = "人界中最寒冷的植物，而后成精祸害百姓，但终被一代人王收服，制成该究极装备。|n|cffff9900减少所受的60%的魔法伤害|n增加200000属性|n增加75%的技能伤害|n增加150W攻击|n增加25%的造成伤害|r|n|cffffff00冰锥刺杀 - 攻击有5%的几率击晕目标0.5s，并造成额外无视防御3000W伤害。|r"
 -- 技能
-abilList = "A09G,A0EH"
+abilList = "A056,A0EH"
 -- 颜色值(绿)
 colorG = 0
 -- 颜色值(红)
@@ -668,7 +668,7 @@ _parent = "cnob"
 -- 界面图标
 Art = "ReplaceableTextures\\CommandButtons\\BTNRejuvenationPotion.blp"
 -- 说明
-Description = "这个瓶子中的水装的是人界和仙界边界中圣泉的水，强大的治愈能力令各方高手为之争夺。|n|cffff9900增加5000点全属性|n增加20%的技能伤害|r|n|cffffff00治愈光环 - 周围900范围的友军以13%每秒的速度回复生命。|r"
+Description = "这个瓶子中的水装的是人界和仙界边界中圣泉的水，强大的治愈能力令各方高手为之争夺。|n|cffff9900增加5000点全属性|n增加20%的技能伤害|r|n|cffffff00治愈光环 - 周围900范围的友军以10%每秒的速度回复生命。|r"
 -- 热键
 Hotkey = ""
 -- 名字
@@ -676,7 +676,7 @@ Name = "|cff99ccff治愈泉水|r"
 -- 提示工具 - 基础
 Tip = "|cff99ccff治愈泉水|r"
 -- 提示工具 - 扩展
-Ubertip = "这个瓶子中的水装的是人界和仙界边界中圣泉的水，强大的治愈能力令各方高手为之争夺。|n|cffff9900增加5000点全属性|n增加20%的技能伤害|r|n|cffffff00治愈光环 - 周围900范围的友军以13%每秒的速度回复生命。|r"
+Ubertip = "这个瓶子中的水装的是人界和仙界边界中圣泉的水，强大的治愈能力令各方高手为之争夺。|n|cffff9900增加5000点全属性|n增加20%的技能伤害|r|n|cffffff00治愈光环 - 周围900范围的友军以10%每秒的速度回复生命。|r"
 -- 技能
 abilList = "A08D"
 -- 颜色值(绿)
@@ -1147,13 +1147,13 @@ _parent = "evtl"
 -- 界面图标
 Art = "ReplaceableTextures\\CommandButtons\\BTNbizhang.blp"
 -- 说明
-Description = "摄人心魂的臂章，据说是用饕餮的牙齿所制，无所不挡。|n|cffff9900增加150W生命上限|n增加150000属性|n增加65%的技能伤害|n增加20%防御|n增加20%造成伤害|r|n|cffffff00狂热之火 - 周围1800范围敌人每秒受到100W伤害。|r"
+Description = "摄人心魂的臂章，据说是用饕餮的牙齿所制，无所不挡。|n|cffff9900增加150W生命上限|n增加120000属性|n增加65%的技能伤害|n增加20%防御|n增加20%造成伤害|r|n|cffffff00狂热之火 - 周围1800范围敌人每秒受到100W伤害。|r"
 -- 名字
 Name = "|cffc0c0c0【魔】残月臂章|r"
 -- 提示工具 - 基础
 Tip = "|cffc0c0c0【魔】残月臂章|r"
 -- 提示工具 - 扩展
-Ubertip = "摄人心魂的臂章，据说是用饕餮的牙齿所制，无所不挡。|n|cffff9900增加150W生命上限|n增加150000属性|n增加65%的技能伤害|n增加20%防御|n增加20%造成伤害|r|n|cffffff00狂热之火 - 周围1800范围敌人每秒受到100W伤害。|r"
+Ubertip = "摄人心魂的臂章，据说是用饕餮的牙齿所制，无所不挡。|n|cffff9900增加150W生命上限|n增加120000属性|n增加65%的技能伤害|n增加20%防御|n增加20%造成伤害|r|n|cffffff00狂热之火 - 周围1800范围敌人每秒受到100W伤害。|r"
 -- 技能
 abilList = "A0CK"
 -- 颜色值(绿)
@@ -1246,7 +1246,7 @@ Art = "ReplaceableTextures\\CommandButtons\\BTNDemolish.blp"
 -- 按钮位置(Y)
 "Buttonpos:2" = 1
 -- 说明
-Description = "一共9个守擂人，挑战成功后可以获得物品奖励。|n|cffff00ff需要轮流挑战|r|n|cffff99cc注意：在挑战的时候你的HP不能回复，当对方造成的总伤害达到你HP上限的时候你立即失败！|r"
+Description = "一共9个守擂人，挑战成功后可以获得物品奖励。|n|cffff00ff需要轮流挑战|r|n"
 -- 热键
 Hotkey = ""
 -- 名字
@@ -1254,7 +1254,7 @@ Name = "挑战擂台"
 -- 提示工具 - 基础
 Tip = "挑战擂台"
 -- 提示工具 - 扩展
-Ubertip = "一共9个守擂人，挑战成功后可以获得物品奖励。|n|cffff00ff需要轮流挑战|r|n|cffff99cc注意：在挑战的时候你的HP不能回复，当对方造成的总伤害达到你HP上限的时候你立即失败！|r"
+Ubertip = "一共9个守擂人，挑战成功后可以获得物品奖励。|n|cffff00ff需要轮流挑战|r|n"
 -- 技能
 abilList = ""
 -- 物品分类
@@ -10475,7 +10475,7 @@ _parent = "fgrd"
 -- 界面图标
 Art = "ReplaceableTextures\\CommandButtons\\BTNDemolish.blp"
 -- 说明
-Description = "一共9个守擂人，挑战成功后可以获得物品奖励。|n|cffff00ff需要轮流挑战|r|n|cffff99cc注意：在挑战的时候你的HP不能回复，当对方造成的总伤害达到你HP上限的时候你立即失败！|r"
+Description = "一共9个守擂人，挑战成功后可以获得物品奖励。|n|cffff00ff需要轮流挑战|r|n"
 -- 热键
 Hotkey = ""
 -- 名字
@@ -10483,7 +10483,7 @@ Name = "开始挑战"
 -- 提示工具 - 基础
 Tip = "开始挑战"
 -- 提示工具 - 扩展
-Ubertip = "一共9个守擂人，挑战成功后可以获得物品奖励。|n|cffff00ff需要轮流挑战|r|n|cffff99cc注意：在挑战的时候HP不能回复，当对方造成的总伤害达到你HP上限的时候你立即失败！|r"
+Ubertip = "一共9个守擂人，挑战成功后可以获得物品奖励。|n|cffff00ff需要轮流挑战|r|n"
 -- 技能
 abilList = ""
 -- 物品分类
@@ -12160,3 +12160,298 @@ file = "Objects\\InventoryItems\\tomeGreen\\tomeGreen.mdl"
 goldcost = 1
 -- 购买时间间隔
 stockRegen = 0
+
+[IB00]
+_parent = "infs"
+-- 界面图标
+Art = "ReplaceableTextures\\CommandButtons\\BTNb0.blp"
+-- 说明
+Description = "生长在人界最寒冷的两极的熊，力大无比，而后被魔界所魔化，其力量更加恐怖了。|n|cffff6800+5W生命|n+50%经验获得率|n|r|cffffff00当你的英雄存活时，两极魔熊会在你的英雄周围进行守护。|r"
+-- 名字
+Name = "|cff408080【魔兽】两极魔熊|r"
+-- 提示工具 - 基础
+Tip = "|cff408080【魔兽】两极魔熊|r"
+-- 提示工具 - 扩展
+Ubertip = "生长在人界最寒冷的两极的熊，力大无比，而后被魔界所魔化，其力量更加恐怖了。|n|cffff6800+5W生命|n+50%经验获得率|n|r|cffffff00当你的英雄存活时，两极魔熊会在你的英雄周围进行守护。|r"
+-- 技能
+abilList = ""
+-- 物品分类
+class = "Campaign"
+-- 黄金消耗
+goldcost = 1000
+-- 购买时间间隔
+stockRegen = 0
+-- 主动使用
+usable = 0
+-- 使用次数
+uses = 0
+-- 使用模型
+file = "Units\\Human\\Phoenix\\PhoenixEgg.mdl"
+-- 模型缩放
+scale = 2.0000
+
+
+[IB01]
+_parent = "infs"
+-- 界面图标
+Art = "ReplaceableTextures\\CommandButtons\\BTNb1.blp"
+-- 说明
+Description = "剧毒茧丝，并含有海洋之芯，加上魔化之能，蚀化之力恐怖如斯。|n|cffff6800+20W生命|n+5000的属性|n+75%经验获得率|r|n|cffffff00当你的英雄存活时，北海冰蛛会在你的英雄周围进行守护。|r"
+-- 名字
+Name = "|cff8080ff【魔兽】北海冰蛛|r"
+-- 提示工具 - 基础
+Tip = "|cff8080ff【魔兽】北海冰蛛|r"
+-- 提示工具 - 扩展
+Ubertip = "剧毒茧丝，并含有海洋之芯，加上魔化之能，蚀化之力恐怖如斯。|n|cffff6800+20W生命|n+5000的属性|n+75%经验获得率|r|n|cffffff00当你的英雄存活时，北海冰蛛会在你的英雄周围进行守护。|r"
+-- 技能
+abilList = ""
+-- 物品分类
+class = "Campaign"
+-- 黄金消耗
+goldcost = 1000
+-- 购买时间间隔
+stockRegen = 0
+-- 主动使用
+usable = 0
+-- 使用次数
+uses = 0
+-- 使用模型
+file = "Units\\Human\\Phoenix\\PhoenixEgg.mdl"
+-- 模型缩放
+scale = 2.0000
+
+
+[IB02]
+_parent = "infs"
+-- 界面图标
+Art = "ReplaceableTextures\\CommandButtons\\BTNb2.blp"
+-- 说明
+Description = "人界上古一大凶兽，破坏人界各和平，几千年前被神界封印，但不久前被魔界所解封，效命于魔界，力无穷，战乾坤！|n|cffff6800+40W生命|n+8000的属性|n+100%经验获得率|n+10点魔法回复速度|r|n|cffffff00当你的英雄存活时，夔牛会在你的英雄周围进行守护。|r"
+-- 名字
+Name = "【魔兽】夔牛"
+-- 提示工具 - 基础
+Tip = "【魔兽】夔牛"
+-- 提示工具 - 扩展
+Ubertip = "人界上古一大凶兽，破坏人界各和平，几千年前被神界封印，但不久前被魔界所解封，效命于魔界，力无穷，战乾坤！|n|cffff6800+40W生命|n+8000的属性|n+100%经验获得率|n+10点魔法回复速度|r|n|cffffff00当你的英雄存活时，夔牛会在你的英雄周围进行守护。|r"
+-- 技能
+abilList = ""
+-- 物品分类
+class = "Campaign"
+-- 黄金消耗
+goldcost = 1000
+-- 购买时间间隔
+stockRegen = 0
+-- 主动使用
+usable = 0
+-- 使用次数
+uses = 0
+-- 使用模型
+file = "Units\\Human\\Phoenix\\PhoenixEgg.mdl"
+-- 模型缩放
+scale = 2.0000
+
+
+[IB03]
+_parent = "infs"
+-- 界面图标
+Art = "ReplaceableTextures\\CommandButtons\\BTNb3.blp"
+-- 说明
+Description = "火焰之主，阎魔召唤，圣古焰火，燎原洪荒！其于六界中是十分可怕的存在，两界镇压才能将其收服。|n|cffff6800+80W生命|n+15000的属性|n+125%经验获得率|n+12点魔法回复速度|n每秒回复8%生命|r|n|cffffff00当你的英雄存活时，八爪火螭会在你的英雄周围进行守护"
+-- 名字
+Name = "|cff008000【魔兽】八爪火螭|r"
+-- 提示工具 - 基础
+Tip = "|cff008000【魔兽】八爪火螭|r"
+-- 提示工具 - 扩展
+Ubertip = "火焰之主，阎魔召唤，圣古焰火，燎原洪荒！其于六界中是十分可怕的存在，两界镇压才能将其收服。|n|cffff6800+80W生命|n+15000的属性|n+125%经验获得率|n+12点魔法回复速度|n每秒回复8%生命|r|n|cffffff00当你的英雄存活时，八爪火 螭会在你的英雄周围进行守护"
+-- 技能
+abilList = ""
+-- 物品分类
+class = "Campaign"
+-- 黄金消耗
+goldcost = 1000
+-- 购买时间间隔
+stockRegen = 0
+-- 主动使用
+usable = 0
+-- 使用次数
+uses = 0
+-- 使用模型
+file = "Units\\Human\\Phoenix\\PhoenixEgg.mdl"
+-- 模型缩放
+scale = 2.0000
+
+[IB04]
+_parent = "infs"
+-- 界面图标
+Art = "ReplaceableTextures\\CommandButtons\\BTNb4.blp"
+-- 说明
+Description = "该魔兽沉心睡眠，一睡即千年，但是当其醒来之时，天崩地裂，六界都为之颤抖。|n|cffff6800+160W生命|n+24000的属性|n+150%经验获得率|n+15点魔法回复速度|n每秒回复10%生命|r|n|cffffff00当你的英雄存活时，雷电蝠龙会在你的英雄周围进行守护。(+1攻击目标)|r"
+-- 名字
+Name = "|cffffff00【魔兽】雷电蝠龙|r"
+-- 提示工具 - 基础
+Tip = "|cffffff00【魔兽】雷电蝠龙|r"
+-- 提示工具 - 扩展
+Ubertip = "该魔兽沉心睡眠，一睡即千年，但是当其醒来之时，天崩地裂，六界都为之颤抖。|n|cffff6800+160W生命|n+24000的属性|n+150%经验获得率|n+15点魔法回复速度|n每秒回复10%生命|r|n|cffffff00当你的英雄存活时，雷电蝠龙会在你的英雄周围进行守护。(+1攻击目标)|r"
+-- 技能
+abilList = ""
+-- 物品分类
+class = "Campaign"
+-- 黄金消耗
+goldcost = 1000
+-- 购买时间间隔
+stockRegen = 0
+-- 主动使用
+usable = 0
+-- 使用次数
+uses = 0
+-- 使用模型
+file = "Units\\Human\\Phoenix\\PhoenixEgg.mdl"
+-- 模型缩放
+scale = 2.0000
+
+
+[IB05]
+_parent = "infs"
+-- 界面图标
+Art = "ReplaceableTextures\\CommandButtons\\BTNb5.blp"
+-- 说明
+Description = "魔界虽造魔兽，但此兽却是其意料之外的产物，若其叛变，那么无论何种指令都不能阻止其撕碎你。|n|cffff6800+320W生命|n+40000的属性|n+175%经验获得率|n+17点魔法回复速度|n每秒回复12%生命|r|n|cffffff00当你的英雄存活时，祸斗会在你的英雄周围进行守护。（魔兽怒吼）|r"
+-- 名字
+Name = "|cff000080【魔兽】祸斗|r"
+-- 提示工具 - 基础
+Tip = "|cff000080【魔兽】祸斗|r"
+-- 提示工具 - 扩展
+Ubertip = "魔界虽造魔兽，但此兽却是其意料之外的产物，若其叛变，那么无论何种指令都不能阻止其撕碎你。|n|cffff6800+320W生命|n+40000的属性|n+175%经验获得率|n+17点魔法回复速度|n每秒回复12%生命|r|n|cffffff00当你的英雄存活时，祸斗会在你的英雄周围进行守护。（魔兽怒吼）|r"
+-- 技能
+abilList = ""
+-- 物品分类
+class = "Campaign"
+-- 黄金消耗
+goldcost = 1000
+-- 购买时间间隔
+stockRegen = 0
+-- 主动使用
+usable = 0
+-- 使用次数
+uses = 0
+-- 使用模型
+file = "Units\\Human\\Phoenix\\PhoenixEgg.mdl"
+-- 模型缩放
+scale = 2.0000
+
+[IB06]
+_parent = "infs"
+-- 界面图标
+Art = "ReplaceableTextures\\CommandButtons\\BTNb6.blp"
+-- 说明
+Description = "上古之神大战三昼夜方将其杀死，但也因此大耗真元，三日便后暴毙而亡,由此可见其恐怖之力.|n|cffff6800+500W生命|n+65000的属性|n+200%经验获得率|n+20点魔法回复速度|n每秒回复13%生命|r|n|cffffff00当你的英雄存活时，祸斗会在你的英雄周围进行守护。(+1攻击目标)|r"
+-- 名字
+Name = "|cffff0080【魔兽】裂天兕|r"
+-- 提示工具 - 基础
+Tip = "|cffff0080【魔兽】裂天兕|r"
+-- 提示工具 - 扩展
+Ubertip = "上古之神大战三昼夜方将其杀死，但也因此大耗真元，三日便后暴毙而亡,由此可见其恐怖之力.|n|cffff6800+500W生命|n+65000的属性|n+200%经验获得率|n+20点魔法回复速度|n每秒回复13%生命|r|n|cffffff00当你的英雄存活时，祸斗会在你的英雄周围进行守护。(+1攻击目标)|r"
+-- 技能
+abilList = ""
+-- 物品分类
+class = "Campaign"
+-- 黄金消耗
+goldcost = 1000
+-- 购买时间间隔
+stockRegen = 0
+-- 主动使用
+usable = 0
+-- 使用次数
+uses = 0
+-- 使用模型
+file = "Units\\Human\\Phoenix\\PhoenixEgg.mdl"
+-- 模型缩放
+scale = 2.0000
+
+[IB07]
+_parent = "infs"
+-- 界面图标
+Art = "ReplaceableTextures\\CommandButtons\\BTNb7.blp"
+-- 说明
+Description = "传闻远古之时，寒荒大神归化密山，尸首化为诸多怪兽；其中最早出现、也是最为暴戾凶狂的，便是沧寒金猊。|n|cffff6800+1000W生命|n+100000的属性|n+225%经验获得率|n+22点魔法回复速度|n每秒回复14%生命|r|n|cffffff00当你的英雄存活时，沧寒金猊会在你的英雄周围进行守护。(超级加速攻击)|r"
+-- 名字
+Name = "|cffff8000【魔兽】沧寒金猊|r"
+-- 提示工具 - 基础
+Tip = "|cffff8000【魔兽】沧寒金猊|r"
+-- 提示工具 - 扩展
+Ubertip = "传闻远古之时，寒荒大神归化密山，尸首化为诸多怪兽；其中最早出现、也是最为暴戾凶狂的，便是沧寒金猊。|n|cffff6800+1000W生命|n+100000的属性|n+225%经验获得率|n+22点魔法回复速度|n每秒回复14%生命|r|n|cffffff00当你的英雄存活时，沧寒金猊会在你的英雄周围进行守护。(超级加速攻击)|r"
+-- 技能
+abilList = ""
+-- 物品分类
+class = "Campaign"
+-- 黄金消耗
+goldcost = 1000
+-- 购买时间间隔
+stockRegen = 0
+-- 主动使用
+usable = 0
+-- 使用次数
+uses = 0
+-- 使用模型
+file = "Units\\Human\\Phoenix\\PhoenixEgg.mdl"
+-- 模型缩放
+scale = 2.0000
+
+
+[IB08]
+_parent = "infs"
+-- 界面图标
+Art = "ReplaceableTextures\\CommandButtons\\BTNb8.blp"
+-- 说明
+Description = "上古四大圣兽凤凰魔化后被改造成了史前凶兽,其可灭几十倍于普通的凤凰,焚化半个世界!|n|cffff6800+2000W生命|n+160000的属性|n+225%经验获得率|n+22点魔法回复速度|n每秒回复15%生命|r|n|cffffff00当你的英雄存活时，五色元凰会在你的英雄周围进行守护。(+1攻击目标)|r"
+-- 名字
+Name = "|cffff0000【魔兽】五色元凰|r"
+-- 提示工具 - 基础
+Tip = "|cffff0000【魔兽】五色元凰|r"
+-- 提示工具 - 扩展
+Ubertip = "上古四大圣兽凤凰魔化后被改造成了史前凶兽,其可灭几十倍于普通的凤凰,焚化半个世界!|n|cffff6800+2000W生命|n+160000的属性|n+225%经验获得率|n+22点魔法回复速度|n每秒回复15%生命|r|n|cffffff00当你的英雄存活时，五色元凰会在你的英雄周围进行守护。(+1攻击目标)|r"
+-- 技能
+abilList = ""
+-- 物品分类
+class = "Campaign"
+-- 黄金消耗
+goldcost = 1000
+-- 购买时间间隔
+stockRegen = 0
+-- 主动使用
+usable = 0
+-- 使用次数
+uses = 0
+-- 使用模型
+file = "Units\\Human\\Phoenix\\PhoenixEgg.mdl"
+-- 模型缩放
+scale = 2.0000
+
+[IB09]
+_parent = "infs"
+-- 界面图标
+Art = "ReplaceableTextures\\CommandButtons\\BTNb9.blp"
+-- 说明
+Description = "禁锢于魔界深渊的创世以来最强的魔兽,吞噬了几代魔王的灵魂,自古以来有数不清之人皆亡于其魔威之下.|n|cffff6800+3000W生命|n+250000的属性|n+250%经验获得率|n+25点魔法回复速度|n每秒回复17%生命|r|n|cffffff00当你的英雄存活时，九翼天龙会在你的英雄周围进行守护。|r"
+-- 名字
+Name = "|cffff0000【超魔兽】九翼|cffffff00天龙|r"
+-- 提示工具 - 基础
+Tip = "|cffff0000【超魔兽】九翼|cffffff00天龙|r"
+-- 提示工具 - 扩展
+Ubertip = "禁锢于魔界深渊的创世以来最强的魔兽,吞噬了几代魔王的灵魂,自古以来有数不清之人皆亡于其魔威之下.|n|cffff6800+3000W生命|n+250000的属性|n+250%经验获得率|n+25点魔法回复速度|n每秒回复17%生命|r|n|cffffff00当你的英雄存活时，九翼天龙会在你的英雄周围进行守护。|r"
+-- 技能
+abilList = ""
+-- 物品分类
+class = "Campaign"
+-- 黄金消耗
+goldcost = 1000
+-- 购买时间间隔
+stockRegen = 0
+-- 主动使用
+usable = 0
+-- 使用次数
+uses = 0
+-- 使用模型
+file = "Units\\Human\\Phoenix\\PhoenixEgg.mdl"
+-- 模型缩放
+scale = 2.0000
