--- a/file/war3map.w3h.ini
+++ b/file/war3map.w3h.ini
@@ -613,7 +613,7 @@ Buffart = "ReplaceableTextures\\CommandButtons\\BTNInvisibility.blp"
 -- 工具提示
 Bufftip = "|cFFFF8040幻冥醉月|r"
 -- 工具提示 - 扩展
-Buffubertip = "整个地图队友(包括自己)魔法恢复速度+35/s."
+Buffubertip = "整个地图队友(包括自己)魔法恢复速度+25/s."
 
 [B016]
 _parent = "BEim"
@@ -679,6 +679,26 @@ Buffart = "ReplaceableTextures\\PassiveButtons\\PASBTNElunesBlessing.blp"
 Bufftip = "流星雨"
 -- 工具提示 - 扩展
 Buffubertip = "该单位受到流星雨的攻击，它将不断受到伤害。"
+
+[B01D]
+_parent = "BUau"
+-- 工具提示
+Bufftip = "魔兽回血"
+-- 工具提示 - 扩展
+Buffubertip = "在魔兽的帮助下"
+-- 效果 - 目标
+TargetArt = ""
+-- 效果 - 目标附加点1
+Targetattach = ""
+
+[B01E]
+_parent = "BHab"
+-- 工具提示
+Bufftip = "魔兽回魔"
+-- 工具提示 - 扩展
+Buffubertip = "在魔兽的帮助下"
+-- 效果 - 目标
+TargetArt = ""
 
 [X000]
 _parent = "XNvc"
