--- a/file/war3map.w3t.ini
+++ b/file/war3map.w3t.ini
@@ -423,7 +423,7 @@ Name = "+9宝石"
 -- 提示工具 - 基础
 Tip = "+9宝石"
 -- 提示工具 - 扩展
-Ubertip = "能升级一些装备。|n|n|cffffcc00点击使用→再点击你要升级的装备。|r|n|cff33ff33成功率：20%（失败降级）|r|n|cff6699ff+9宝石 + 祝福石 = +9祝福石|n+9宝石 + 诅咒石 = +9诅咒石|n+9宝石 + 强化石 = +9强化石|r"
+Ubertip = "能升级一些装备。|n|n|cffffcc00点击使用→再点击你要升级的装备。|r|n|cff33ff33成功率：40%（失败降级）|r|n|cff6699ff+9宝石 + 祝福石 = +9祝福石|n+9宝石 + 诅咒石 = +9诅咒石|n+9宝石 + 强化石 = +9强化石|r"
 -- 技能
 abilList = "A0DO"
 -- 颜色值(蓝)
@@ -827,7 +827,7 @@ Name = "祝福石"
 -- 提示工具 - 基础
 Tip = "祝福石"
 -- 提示工具 - 扩展
-Ubertip = "能和其他宝石融合在一起，令其合成不会失败，但是成功率降低10%。|n|cff6699ff+4/+5/+6/+7/+8/+9宝石 + 祝福石 = +4/+5/+6/+7/+8/+9祝福石|r"
+Ubertip = "能和其他宝石融合在一起，令其合成失败不会降低等级，但是成功率降低10%。|n|cff6699ff+4/+5/+6/+7/+8/+9宝石 + 祝福石 = +4/+5/+6/+7/+8/+9祝福石|r"
 -- 技能
 abilList = ""
 -- 颜色值(蓝)
@@ -2136,7 +2136,7 @@ Name = "+8祝福石"
 -- 提示工具 - 基础
 Tip = "+8祝福石"
 -- 提示工具 - 扩展
-Ubertip = "能升级一些装备。|n|n|cffffcc00点击使用→再点击你要升级的装备。|r|n|cff33ff33成功率：20%|r"
+Ubertip = "能升级一些装备。|n|n|cffffcc00点击使用→再点击你要升级的装备。|r|n|cff33ff33成功率：30%|r"
 -- 技能
 abilList = "A0DL"
 -- 颜色值(绿)
@@ -2179,7 +2179,7 @@ Name = "+8强化石"
 -- 提示工具 - 基础
 Tip = "+8强化石"
 -- 提示工具 - 扩展
-Ubertip = "能升级一些装备。|n|n|cffffcc00点击使用→再点击你要升级的装备。|r|n|cff33ff33成功率：50%（失败降级）|r"
+Ubertip = "能升级一些装备。|n|n|cffffcc00点击使用→再点击你要升级的装备。|r|n|cff33ff33成功率：60%（失败降级）|r"
 -- 技能
 abilList = "A0DK"
 -- 颜色值(绿)
@@ -2272,7 +2272,7 @@ Name = "+9祝福石"
 -- 提示工具 - 基础
 Tip = "+9祝福石"
 -- 提示工具 - 扩展
-Ubertip = "能升级一些装备。|n|n|cffffcc00点击使用→再点击你要升级的装备。|r|n|cff33ff33成功率：10%|r"
+Ubertip = "能升级一些装备。|n|n|cffffcc00点击使用→再点击你要升级的装备。|r|n|cff33ff33成功率：30%|r"
 -- 技能
 abilList = "A0DQ"
 -- 颜色值(蓝)
@@ -2315,7 +2315,7 @@ Name = "+8诅咒石"
 -- 提示工具 - 基础
 Tip = "+8诅咒石"
 -- 提示工具 - 扩展
-Ubertip = "能升级一些装备。|n|n|cffffcc00点击使用→再点击你要升级的装备。|r|n|cff33ff33成功率：60%（失败装备将降低2级）|r"
+Ubertip = "能升级一些装备。|n|n|cffffcc00点击使用→再点击你要升级的装备。|r|n|cff33ff33成功率：70%（失败装备将降低2级）|r"
 -- 技能
 abilList = "A0DM"
 -- 颜色值(绿)
@@ -2401,7 +2401,7 @@ Name = "+9强化石"
 -- 提示工具 - 基础
 Tip = "+9强化石"
 -- 提示工具 - 扩展
-Ubertip = "能升级一些装备。|n|n|cffffcc00点击使用→再点击你要升级的装备。|r|n|cff33ff33成功率：40%（失败降级）|r"
+Ubertip = "能升级一些装备。|n|n|cffffcc00点击使用→再点击你要升级的装备。|r|n|cff33ff33成功率：60%（失败降级）|r"
 -- 技能
 abilList = "A0DR"
 -- 颜色值(蓝)
@@ -4825,7 +4825,7 @@ _parent = "rwat"
 -- 界面图标
 Art = "ReplaceableTextures\\CommandButtons\\BTNSnazzyScrollGreen.blp"
 -- 说明
-Description = "给整个地图的英雄队友提供额外的防御！|n|cffffcc00防御|r|cff3b98d3（每级加3％）|r"
+Description = "给整个地图的英雄队友提供额外的防御！|n|cffffcc00防御|r|cff3b98d3（每级加2％）|r"
 -- 热键
 Hotkey = ""
 -- 名字
@@ -4833,7 +4833,7 @@ Name = "防御增益"
 -- 提示工具 - 基础
 Tip = "防御增益"
 -- 提示工具 - 扩展
-Ubertip = "给整个地图的英雄队友提供额外的防御！|n|cffffcc00防御|r|cff3b98d3（每级加3％）|r"
+Ubertip = "给整个地图的英雄队友提供额外的防御！|n|cffffcc00防御|r|cff3b98d3（每级加2％）|r"
 -- 技能
 abilList = ""
 -- CD间隔组
@@ -4990,7 +4990,7 @@ Name = "+8宝石"
 -- 提示工具 - 基础
 Tip = "+8宝石"
 -- 提示工具 - 扩展
-Ubertip = "能升级一些装备。|n|n|cffffcc00点击使用→再点击你要升级的装备。|r|n|cff33ff33成功率：30%（失败降级）|r|n|cff6699ff+8宝石 + 祝福石 = +8祝福石|n+8宝石 + 诅咒石 = +8诅咒石|n+8宝石 + 强化石 = +8强化石|r"
+Ubertip = "能升级一些装备。|n|n|cffffcc00点击使用→再点击你要升级的装备。|r|n|cff33ff33成功率：40%（失败降级）|r|n|cff6699ff+8宝石 + 祝福石 = +8祝福石|n+8宝石 + 诅咒石 = +8诅咒石|n+8宝石 + 强化石 = +8强化石|r"
 -- 技能
 abilList = "A0DJ"
 -- 颜色值(绿)
@@ -5314,7 +5314,7 @@ Name = "+9诅咒石"
 -- 提示工具 - 基础
 Tip = "+9诅咒石"
 -- 提示工具 - 扩展
-Ubertip = "能升级一些装备。|n|n|cffffcc00点击使用→再点击你要升级的装备。|r|n|cff33ff33成功率：50%（失败装备将降低2级）|r"
+Ubertip = "能升级一些装备。|n|n|cffffcc00点击使用→再点击你要升级的装备。|r|n|cff33ff33成功率：70%（失败装备将降低2级）|r"
 -- 技能
 abilList = "A0DP"
 -- 颜色值(蓝)
@@ -9343,6 +9343,47 @@ stockMax = 1
 -- 购买时间间隔
 stockRegen = 0
 
+[I02R]
+_parent = "will"
+-- 界面图标
+Art = "ReplaceableTextures\\CommandButtons\\BTNb9.blp"
+-- 按钮位置(X)
+"Buttonpos:1" = 1
+-- 按钮位置(Y)
+"Buttonpos:2" = 2
+-- 说明
+Description = "需要：|n|cffff0000【魔兽】五色元凰|r|n|cffffff00巨能融合石|r"
+-- 热键
+Hotkey = ""
+-- 名字
+Name = "合成|cffff0000【超魔兽】九翼|cffffff00天龙|r"
+-- 提示工具 - 基础
+Tip = "合成|cffff0000【超魔兽】九翼|cffffff00天龙|r"
+-- 提示工具 - 扩展
+Ubertip = "需要：|n|cffff0000【魔兽】五色元凰|r|n|cffffff00巨能融合石|r"
+-- 技能
+abilList = ""
+-- 物品分类
+class = "PowerUp"
+-- CD间隔组
+cooldownID = ""
+-- 使用模型
+file = "Objects\\InventoryItems\\tomeGreen\\tomeGreen.mdl"
+-- 黄金消耗
+goldcost = 0
+-- 木材消耗
+lumbercost = 1000
+-- 可作为随机物品
+pickRandom = 0
+-- 捡取时自动使用
+powerup = 1
+-- 可被市场出售
+sellable = 0
+-- 购买时间间隔
+stockRegen = 0
+-- 使用次数
+uses = 1
+
 [I02W]
 _parent = "hlst"
 -- 说明
@@ -10564,7 +10605,7 @@ Art = "ReplaceableTextures\\CommandButtons\\BTNHumanArmorUpThree.blp"
 -- 按钮位置(Y)
 "Buttonpos:2" = 1
 -- 说明
-Description = "|cff00ff00每次需要消耗：25000的杀敌数|r|n增加基地和五个塔15000的防御，在魔王开始进攻以后才可以购买。|cff00ccff|n|r|cff33ff33杀敌数在右上角的多面板处查看。|r"
+Description = "|cff00ff00每次需要消耗：25000的杀敌数|r|n增加基地和五个塔30000的防御，在魔王开始进攻以后才可以购买。|cff00ccff|n|r|cff33ff33杀敌数在右上角的多面板处查看。|r"
 -- 热键
 Hotkey = ""
 -- 名字
@@ -10572,7 +10613,7 @@ Name = "超强护盾"
 -- 提示工具 - 基础
 Tip = "超强护盾"
 -- 提示工具 - 扩展
-Ubertip = "|cff00ff00每次需要消耗：25000的杀敌数|r|n增加基地和五个塔15000的防御，在魔王开始进攻以后才可以购买。|cff00ccff|n|r|cff33ff33杀敌数在右上角的多面板处查看。|r"
+Ubertip = "|cff00ff00每次需要消耗：25000的杀敌数|r|n增加基地和五个塔30000的防御，在魔王开始进攻以后才可以购买。|cff00ccff|n|r|cff33ff33杀敌数在右上角的多面板处查看。|r"
 -- 技能
 abilList = ""
 -- CD间隔组
@@ -11807,7 +11848,7 @@ Art = "ReplaceableTextures\\CommandButtons\\BTNStoneArchitecture.blp"
 -- 按钮位置(Y)
 "Buttonpos:2" = 2
 -- 说明
-Description = "|cffffcc00加强所有建筑5W血、50点回血速度和50点防御。|n基地额外加强50点防御。|r"
+Description = "|cffffcc00加强所有建筑50W血、50点回血速度和50点防御。|n基地额外加强50点防御。|r"
 -- 热键
 Hotkey = ""
 -- 名字
@@ -11815,7 +11856,7 @@ Name = "加强建筑"
 -- 提示工具 - 基础
 Tip = "加强建筑"
 -- 提示工具 - 扩展
-Ubertip = "|cffffcc00加强所有建筑5W血、50点回血速度和50点防御。|n基地额外加强50点防御。|r"
+Ubertip = "|cffffcc00加强所有建筑50W血、50点回血速度和50点防御。|n基地额外加强50点防御。|r"
 -- 技能
 abilList = ""
 -- CD间隔组
@@ -12177,19 +12218,18 @@ Ubertip = "生长在人界最寒冷的两极的熊，力大无比，而后被魔
 abilList = ""
 -- 物品分类
 class = "Campaign"
+-- 使用模型
+file = "Units\\Human\\Phoenix\\PhoenixEgg.mdl"
 -- 黄金消耗
 goldcost = 1000
+-- 模型缩放
+scale = 2.0000
 -- 购买时间间隔
 stockRegen = 0
 -- 主动使用
 usable = 0
 -- 使用次数
 uses = 0
--- 使用模型
-file = "Units\\Human\\Phoenix\\PhoenixEgg.mdl"
--- 模型缩放
-scale = 2.0000
-
 
 [IB01]
 _parent = "infs"
@@ -12207,19 +12247,18 @@ Ubertip = "剧毒茧丝，并含有海洋之芯，加上魔化之能，蚀化之
 abilList = ""
 -- 物品分类
 class = "Campaign"
+-- 使用模型
+file = "Units\\Human\\Phoenix\\PhoenixEgg.mdl"
 -- 黄金消耗
 goldcost = 1000
+-- 模型缩放
+scale = 2.0000
 -- 购买时间间隔
 stockRegen = 0
 -- 主动使用
 usable = 0
 -- 使用次数
 uses = 0
--- 使用模型
-file = "Units\\Human\\Phoenix\\PhoenixEgg.mdl"
--- 模型缩放
-scale = 2.0000
-
 
 [IB02]
 _parent = "infs"
@@ -12234,22 +12273,21 @@ Tip = "【魔兽】夔牛"
 -- 提示工具 - 扩展
 Ubertip = "人界上古一大凶兽，破坏人界各和平，几千年前被神界封印，但不久前被魔界所解封，效命于魔界，力无穷，战乾坤！|n|cffff6800+40W生命|n+8000的属性|n+100%经验获得率|n+10点魔法回复速度|r|n|cffffff00当你的英雄存活时，夔牛会在你的英雄周围进行守护。|r"
 -- 技能
-abilList = ""
+abilList = "A0G7"
 -- 物品分类
 class = "Campaign"
+-- 使用模型
+file = "Units\\Human\\Phoenix\\PhoenixEgg.mdl"
 -- 黄金消耗
 goldcost = 1000
+-- 模型缩放
+scale = 2.0000
 -- 购买时间间隔
 stockRegen = 0
 -- 主动使用
 usable = 0
 -- 使用次数
 uses = 0
--- 使用模型
-file = "Units\\Human\\Phoenix\\PhoenixEgg.mdl"
--- 模型缩放
-scale = 2.0000
-
 
 [IB03]
 _parent = "infs"
@@ -12264,21 +12302,21 @@ Tip = "|cff008000【魔兽】八爪火螭|r"
 -- 提示工具 - 扩展
 Ubertip = "火焰之主，阎魔召唤，圣古焰火，燎原洪荒！其于六界中是十分可怕的存在，两界镇压才能将其收服。|n|cffff6800+80W生命|n+15000的属性|n+125%经验获得率|n+12点魔法回复速度|n每秒回复8%生命|r|n|cffffff00当你的英雄存活时，八爪火 螭会在你的英雄周围进行守护"
 -- 技能
-abilList = ""
+abilList = "A0DW,A0G8"
 -- 物品分类
 class = "Campaign"
+-- 使用模型
+file = "Units\\Human\\Phoenix\\PhoenixEgg.mdl"
 -- 黄金消耗
 goldcost = 1000
+-- 模型缩放
+scale = 2.0000
 -- 购买时间间隔
 stockRegen = 0
 -- 主动使用
 usable = 0
 -- 使用次数
 uses = 0
--- 使用模型
-file = "Units\\Human\\Phoenix\\PhoenixEgg.mdl"
--- 模型缩放
-scale = 2.0000
 
 [IB04]
 _parent = "infs"
@@ -12293,22 +12331,21 @@ Tip = "|cffffff00【魔兽】雷电蝠龙|r"
 -- 提示工具 - 扩展
 Ubertip = "该魔兽沉心睡眠，一睡即千年，但是当其醒来之时，天崩地裂，六界都为之颤抖。|n|cffff6800+160W生命|n+24000的属性|n+150%经验获得率|n+15点魔法回复速度|n每秒回复10%生命|r|n|cffffff00当你的英雄存活时，雷电蝠龙会在你的英雄周围进行守护。(+1攻击目标)|r"
 -- 技能
-abilList = ""
+abilList = "A0E2,A0GF"
 -- 物品分类
 class = "Campaign"
+-- 使用模型
+file = "Units\\Human\\Phoenix\\PhoenixEgg.mdl"
 -- 黄金消耗
 goldcost = 1000
+-- 模型缩放
+scale = 2.0000
 -- 购买时间间隔
 stockRegen = 0
 -- 主动使用
 usable = 0
 -- 使用次数
 uses = 0
--- 使用模型
-file = "Units\\Human\\Phoenix\\PhoenixEgg.mdl"
--- 模型缩放
-scale = 2.0000
-
 
 [IB05]
 _parent = "infs"
@@ -12323,21 +12360,21 @@ Tip = "|cff000080【魔兽】祸斗|r"
 -- 提示工具 - 扩展
 Ubertip = "魔界虽造魔兽，但此兽却是其意料之外的产物，若其叛变，那么无论何种指令都不能阻止其撕碎你。|n|cffff6800+320W生命|n+40000的属性|n+175%经验获得率|n+17点魔法回复速度|n每秒回复12%生命|r|n|cffffff00当你的英雄存活时，祸斗会在你的英雄周围进行守护。（魔兽怒吼）|r"
 -- 技能
-abilList = ""
+abilList = "A0E3,A0GG"
 -- 物品分类
 class = "Campaign"
+-- 使用模型
+file = "Units\\Human\\Phoenix\\PhoenixEgg.mdl"
 -- 黄金消耗
 goldcost = 1000
+-- 模型缩放
+scale = 2.0000
 -- 购买时间间隔
 stockRegen = 0
 -- 主动使用
 usable = 0
 -- 使用次数
 uses = 0
--- 使用模型
-file = "Units\\Human\\Phoenix\\PhoenixEgg.mdl"
--- 模型缩放
-scale = 2.0000
 
 [IB06]
 _parent = "infs"
@@ -12352,21 +12389,21 @@ Tip = "|cffff0080【魔兽】裂天兕|r"
 -- 提示工具 - 扩展
 Ubertip = "上古之神大战三昼夜方将其杀死，但也因此大耗真元，三日便后暴毙而亡,由此可见其恐怖之力.|n|cffff6800+500W生命|n+65000的属性|n+200%经验获得率|n+20点魔法回复速度|n每秒回复13%生命|r|n|cffffff00当你的英雄存活时，祸斗会在你的英雄周围进行守护。(+1攻击目标)|r"
 -- 技能
-abilList = ""
+abilList = "A0E4,A0GH"
 -- 物品分类
 class = "Campaign"
+-- 使用模型
+file = "Units\\Human\\Phoenix\\PhoenixEgg.mdl"
 -- 黄金消耗
 goldcost = 1000
+-- 模型缩放
+scale = 2.0000
 -- 购买时间间隔
 stockRegen = 0
 -- 主动使用
 usable = 0
 -- 使用次数
 uses = 0
--- 使用模型
-file = "Units\\Human\\Phoenix\\PhoenixEgg.mdl"
--- 模型缩放
-scale = 2.0000
 
 [IB07]
 _parent = "infs"
@@ -12381,29 +12418,28 @@ Tip = "|cffff8000【魔兽】沧寒金猊|r"
 -- 提示工具 - 扩展
 Ubertip = "传闻远古之时，寒荒大神归化密山，尸首化为诸多怪兽；其中最早出现、也是最为暴戾凶狂的，便是沧寒金猊。|n|cffff6800+1000W生命|n+100000的属性|n+225%经验获得率|n+22点魔法回复速度|n每秒回复14%生命|r|n|cffffff00当你的英雄存活时，沧寒金猊会在你的英雄周围进行守护。(超级加速攻击)|r"
 -- 技能
-abilList = ""
+abilList = "A0E5,A0GI"
 -- 物品分类
 class = "Campaign"
+-- 使用模型
+file = "Units\\Human\\Phoenix\\PhoenixEgg.mdl"
 -- 黄金消耗
 goldcost = 1000
+-- 模型缩放
+scale = 2.0000
 -- 购买时间间隔
 stockRegen = 0
 -- 主动使用
 usable = 0
 -- 使用次数
 uses = 0
--- 使用模型
-file = "Units\\Human\\Phoenix\\PhoenixEgg.mdl"
--- 模型缩放
-scale = 2.0000
-
 
 [IB08]
 _parent = "infs"
 -- 界面图标
 Art = "ReplaceableTextures\\CommandButtons\\BTNb8.blp"
 -- 说明
-Description = "上古四大圣兽凤凰魔化后被改造成了史前凶兽,其可灭几十倍于普通的凤凰,焚化半个世界!|n|cffff6800+2000W生命|n+160000的属性|n+225%经验获得率|n+22点魔法回复速度|n每秒回复15%生命|r|n|cffffff00当你的英雄存活时，五色元凰会在你的英雄周围进行守护。(+1攻击目标)|r"
+Description = "上古四大圣兽凤凰魔化后被改造成了史前凶兽,其可灭几十倍于普通的凤凰,焚化半个世界!|n|cffff6800+2000W生命|n+160000的属性|n+250%经验获得率|n+22点魔法回复速度|n每秒回复15%生命|r|n|cffffff00当你的英雄存活时，五色元凰会在你的英雄周围进行守护。(+1攻击目标)|r"
 -- 名字
 Name = "|cffff0000【魔兽】五色元凰|r"
 -- 提示工具 - 基础
@@ -12411,47 +12447,47 @@ Tip = "|cffff0000【魔兽】五色元凰|r"
 -- 提示工具 - 扩展
 Ubertip = "上古四大圣兽凤凰魔化后被改造成了史前凶兽,其可灭几十倍于普通的凤凰,焚化半个世界!|n|cffff6800+2000W生命|n+160000的属性|n+225%经验获得率|n+22点魔法回复速度|n每秒回复15%生命|r|n|cffffff00当你的英雄存活时，五色元凰会在你的英雄周围进行守护。(+1攻击目标)|r"
 -- 技能
-abilList = ""
+abilList = "A0ER,A0GI"
 -- 物品分类
 class = "Campaign"
+-- 使用模型
+file = "Units\\Human\\Phoenix\\PhoenixEgg.mdl"
 -- 黄金消耗
 goldcost = 1000
+-- 模型缩放
+scale = 2.0000
 -- 购买时间间隔
 stockRegen = 0
 -- 主动使用
 usable = 0
 -- 使用次数
 uses = 0
--- 使用模型
-file = "Units\\Human\\Phoenix\\PhoenixEgg.mdl"
--- 模型缩放
-scale = 2.0000
 
 [IB09]
 _parent = "infs"
 -- 界面图标
 Art = "ReplaceableTextures\\CommandButtons\\BTNb9.blp"
 -- 说明
-Description = "禁锢于魔界深渊的创世以来最强的魔兽,吞噬了几代魔王的灵魂,自古以来有数不清之人皆亡于其魔威之下.|n|cffff6800+3000W生命|n+250000的属性|n+250%经验获得率|n+25点魔法回复速度|n每秒回复17%生命|r|n|cffffff00当你的英雄存活时，九翼天龙会在你的英雄周围进行守护。|r"
+Description = "禁锢于魔界深渊的创世以来最强的魔兽,吞噬了几代魔王的灵魂,自古以来有数不清之人皆亡于其魔威之下.|n|cffff6800+3000W生命|n+250000的属性|n+300%经验获得率|n+25点魔法回复速度|n每秒回复17%生命|r|n|cffffff00当你的英雄存活时，九翼天龙会在你的英雄周围进行守护。|r"
 -- 名字
 Name = "|cffff0000【超魔兽】九翼|cffffff00天龙|r"
 -- 提示工具 - 基础
 Tip = "|cffff0000【超魔兽】九翼|cffffff00天龙|r"
 -- 提示工具 - 扩展
-Ubertip = "禁锢于魔界深渊的创世以来最强的魔兽,吞噬了几代魔王的灵魂,自古以来有数不清之人皆亡于其魔威之下.|n|cffff6800+3000W生命|n+250000的属性|n+250%经验获得率|n+25点魔法回复速度|n每秒回复17%生命|r|n|cffffff00当你的英雄存活时，九翼天龙会在你的英雄周围进行守护。|r"
+Ubertip = "禁锢于魔界深渊的创世以来最强的魔兽,吞噬了几代魔王的灵魂,自古以来有数不清之人皆亡于其魔威之下.|n|cffff6800+3000W生命|n+250000的属性|n+300%经验获得率|n+25点魔法回复速度|n每秒回复17%生命|r|n|cffffff00当你的英雄存活时，九翼天龙会在你的英雄周围进行守护。|r"
 -- 技能
-abilList = ""
+abilList = "A0EW,A0GJ"
 -- 物品分类
 class = "Campaign"
+-- 使用模型
+file = "Units\\Human\\Phoenix\\PhoenixEgg.mdl"
 -- 黄金消耗
 goldcost = 1000
+-- 模型缩放
+scale = 2.0000
 -- 购买时间间隔
 stockRegen = 0
 -- 主动使用
 usable = 0
 -- 使用次数
 uses = 0
--- 使用模型
-file = "Units\\Human\\Phoenix\\PhoenixEgg.mdl"
--- 模型缩放
-scale = 2.0000
