--- a/file/war3map.w3i.ini
+++ b/file/war3map.w3i.ini
@@ -1,8 +1,8 @@
 [地图]
 文件版本 = 25
-地图版本 = 1314
+地图版本 = 1345
 编辑器版本 = 6052
-地图名称 = "轮回之狱 - v2.53修复版"
+地图名称 = "轮回之狱 - v2.56C正式版"
 作者名字 = "Crainax(旧名Laser)"
 地图描述 = [=[
 魔界滋生了六界之外的力量,而人神妖鬼仙界察觉了这种力量，而决定联手起来将魔界歼灭。寻找战友、提交BUG、寻找攻略请加官方地图QQ群148199145。
@@ -84,8 +84,8 @@ z轴终点 = 5000.0000
 [玩家1]
 玩家 = 0
 类型 = 1
-种族 = 0
-修正出生点 = 3
+种族 = 1
+修正出生点 = 1
 名字 = "玩家 1"
 出生点 = {-14528.0000, -14720.0000}
 低结盟优先权标记 = {}
@@ -94,8 +94,8 @@ z轴终点 = 5000.0000
 [玩家2]
 玩家 = 1
 类型 = 1
-种族 = 0
-修正出生点 = 3
+种族 = 1
+修正出生点 = 1
 名字 = "玩家 2"
 出生点 = {-14528.0000, -14720.0000}
 低结盟优先权标记 = {}
@@ -104,8 +104,8 @@ z轴终点 = 5000.0000
 [玩家3]
 玩家 = 2
 类型 = 1
-种族 = 0
-修正出生点 = 3
+种族 = 1
+修正出生点 = 1
 名字 = "玩家 3"
 出生点 = {-14528.0000, -14720.0000}
 低结盟优先权标记 = {}
@@ -114,8 +114,8 @@ z轴终点 = 5000.0000
 [玩家4]
 玩家 = 3
 类型 = 1
-种族 = 0
-修正出生点 = 3
+种族 = 1
+修正出生点 = 1
 名字 = "玩家 4"
 出生点 = {-14528.0000, -14720.0000}
 低结盟优先权标记 = {}
@@ -124,8 +124,8 @@ z轴终点 = 5000.0000
 [玩家5]
 玩家 = 4
 类型 = 1
-种族 = 0
-修正出生点 = 3
+种族 = 1
+修正出生点 = 1
 名字 = "玩家 5"
 出生点 = {-14528.0000, -14720.0000}
 低结盟优先权标记 = {}
@@ -134,8 +134,8 @@ z轴终点 = 5000.0000
 [玩家6]
 玩家 = 5
 类型 = 1
-种族 = 0
-修正出生点 = 3
+种族 = 1
+修正出生点 = 1
 名字 = "玩家 6"
 出生点 = {-14528.0000, -14720.0000}
 低结盟优先权标记 = {}
@@ -144,8 +144,8 @@ z轴终点 = 5000.0000
 [玩家7]
 玩家 = 6
 类型 = 2
-种族 = 0
-修正出生点 = 3
+种族 = 4
+修正出生点 = 1
 名字 = "五界联盟"
 出生点 = {-14528.0000, -14720.0000}
 低结盟优先权标记 = {}
@@ -154,8 +154,8 @@ z轴终点 = 5000.0000
 [玩家8]
 玩家 = 10
 类型 = 2
-种族 = 0
-修正出生点 = 3
+种族 = 3
+修正出生点 = 1
 名字 = "野怪"
 出生点 = {-14528.0000, -14720.0000}
 低结盟优先权标记 = {}
@@ -164,8 +164,8 @@ z轴终点 = 5000.0000
 [玩家9]
 玩家 = 11
 类型 = 2
-种族 = 0
-修正出生点 = 3
+种族 = 3
+修正出生点 = 1
 名字 = "魔界"
 出生点 = {-14528.0000, -14720.0000}
 低结盟优先权标记 = {}
