update obj file

--- a/file/war3map.w3u.ini
+++ b/file/war3map.w3u.ini
@@ -2187,6 +2187,67 @@ sides1 = 1
 -- 攻击 1 - 目标允许
 targs1 = "ground,structure,debris,air,item,ward,wall"
 
+[Udea]
+_parent = "Udea"
+-- 英雄 - 初始敏捷
+AGI = 100
+-- 英雄 - 每等级提升敏捷
+AGIplus = 10.0000
+-- 生命最大值
+HP = 4000
+-- 英雄 - 初始智力
+INT = 100
+-- 英雄 - 每等级提升智力
+INTplus = 10.0000
+-- 名字
+Name = "|cffff6800黑阎|r"
+-- 称谓
+Propernames = "|cff0000ff鬼丶罪断轮回|r"
+-- 需求 - 等级 2
+Requires1 = ""
+-- 需求 - 等级 3
+Requires2 = ""
+-- 需求 -使用等级数
+Requirescount = 0
+-- 英雄 - 初始力量
+STR = 100
+-- 英雄 - 每等级提升力量
+STRplus = 20.0000
+-- 普通
+abilList = "A04N,AInv,A0B9"
+-- 攻击 1 - 动画回复点
+backSw1 = 0.4000
+-- 分类 - 战役
+campaign = 1
+-- 攻击 1 - 攻击间隔
+cool1 = 0.0100
+-- 基础护甲
+def = 0.0000
+-- 攻击 1 - 伤害骰子数量
+dice1 = 1
+-- 攻击 1 - 动画伤害点
+dmgpt1 = 0.5500
+-- 占用人口
+fused = 0
+-- 英雄
+heroAbilList = "A0C7"
+-- 魔法初始数量
+mana0 = 0
+-- 魔法最大值
+manaN = 1000
+-- 称谓数量
+nameCount = 1
+-- 生命回复
+regenHP = 400.0000
+-- 魔法回复
+regenMana = 10.0000
+-- 生命回复类型
+regenType = "always"
+-- 攻击 1 - 伤害骰子面数
+sides1 = 1
+-- 攻击 1 - 目标允许
+targs1 = "ground,structure,debris,air,item,ward,wall"
+
 [Uear]
 _parent = "Uear"
 -- 英雄 - 初始敏捷
@@ -14058,6 +14119,45 @@ stockMax = 0
 stockRegen = 0
 -- 单位类别
 type = "standon"
+-- 阴影图像(单位)
+unitShadow = ""
+-- 使用科技
+upgrades = ""
+-- 允许攻击模式
+weapsOn = 0
+
+[h008]
+_parent = "hpea"
+-- 可建造建筑
+Builds = ""
+-- 名字 - 编辑器后缀
+EditorSuffix = "千鬼邪"
+-- 生命最大值
+HP = 1
+-- 名字
+Name = ""
+-- 普通
+abilList = "Aloc,Avul"
+-- 碰撞体积
+collision = 0.0000
+-- 模型文件
+file = "war3mapImported\\ShadowAssault.mdl"
+-- 占用人口
+fused = 0
+-- 模型缩放
+modelScale = 4.0000
+-- 视野范围(夜晚)
+nsight = 100
+-- 单位附加值
+points = 123
+-- 生命回复
+regenHP = 0.0000
+-- 视野范围(白天)
+sight = 100
+-- 基础速度
+spd = 0
+-- 单位类别
+type = ""
 -- 阴影图像(单位)
 unitShadow = ""
 -- 使用科技
