--- a/file/war3map.w3a.ini
+++ b/file/war3map.w3a.ini
@@ -3615,7 +3615,7 @@ Cost = 100
 -- 伤害/间隔时间
 DataA = 1.0000
 -- 每秒魔法消耗
-DataB = 40.0000
+DataB = 50.0000
 -- 热键 - 普通
 Hotkey = "E"
 -- 名字
@@ -3631,11 +3631,11 @@ Researchhotkey = "E"
 -- 提示工具 - 学习
 Researchtip = "学习|cffff0000恒星庇佑|r(|cffffcc00E|r)"
 -- 提示工具 - 学习 - 扩展
-Researchubertip = "|cffff3399泰雅|r受到宇宙的祝福，召唤星辰之力来惩戒敌人。|n|n|cffffff00主动效果：|r激活后MP以40点每秒的速度耗费，但是每隔1s,就会对周围|cffffff00900范围|r的所有敌人坠落一颗|cffffff00陨石|r来攻击敌人，每颗陨石造成|cffff9900（力量+敏捷X1.8+智力X1.2）X（等级的平方根）X50%点魔法伤害|r。|n|n|cffffff00被动技能：|r有|cffffff0030%|r的几率躲避掉伤害（非秒杀性），并将该伤害转换为自身生命，在|cffff99cc月光之阵|r中，该伤害还会以|cffffff005倍的数值|r来反弹给对方。|n|cff99cc00且能让对方反弹性技能无效化。|r"
+Researchubertip = "|cffff3399泰雅|r受到宇宙的祝福，召唤星辰之力来惩戒敌人。|n|n|cffffff00主动效果：|r激活后MP以50点每秒的速度耗费，但是每隔1s,就会对周围|cffffff00900范围|r的所有敌人坠落一颗|cffffff00陨石|r来攻击敌人，每颗陨石造成|cffff9900（力量+敏捷X1.8+智力X1.2）X（等级的平方根）X50%点魔法伤害|r。|n|n|cffffff00被动技能：|r有|cffffff0030%|r的几率躲避掉伤害（非秒杀性），并将该伤害转换为自身生命，在|cffff99cc月光之阵|r中，该伤害还会以|cffffff005倍的数值|r来反弹给对方。|n|cff99cc00且能让对方反弹性技能无效化。|r"
 -- 提示工具 - 普通
 Tip = "激活|cffff0000恒星庇佑|r(|cffffcc00E|r)"
 -- 提示工具 - 普通 - 扩展
-Ubertip = "|cffff3399泰雅|r受到宇宙的祝福，召唤星辰之力来惩戒敌人。|n|n|cffffff00主动效果：|r激活后MP以40点每秒的速度耗费，但是每隔1s,就会对周围|cffffff00900范围|r的所有敌人坠落一颗|cffffff00陨石|r来攻击敌人，每颗陨石造成|cffff9900（力量+敏捷X1.8+智力X1.2）X（等级的平方根）X50%点魔法伤害|r。|n|n|cffffff00被动技能：|r有|cffffff0030%|r的几率躲避掉伤害（非秒杀性），并将该伤害转换为自身生命，在|cffff99cc月光之阵|r中，该伤害还会以|cffffff005倍的数值|r来反弹给对方。|n|cff99cc00且能让对方反弹性技能无效化。|r"
+Ubertip = "|cffff3399泰雅|r受到宇宙的祝福，召唤星辰之力来惩戒敌人。|n|n|cffffff00主动效果：|r激活后MP以50点每秒的速度耗费，但是每隔1s,就会对周围|cffffff00900范围|r的所有敌人坠落一颗|cffffff00陨石|r来攻击敌人，每颗陨石造成|cffff9900（力量+敏捷X1.8+智力X1.2）X（等级的平方根）X50%点魔法伤害|r。|n|n|cffffff00被动技能：|r有|cffffff0030%|r的几率躲避掉伤害（非秒杀性），并将该伤害转换为自身生命，在|cffff99cc月光之阵|r中，该伤害还会以|cffffff005倍的数值|r来反弹给对方。|n|cff99cc00且能让对方反弹性技能无效化。|r"
 -- 按钮位置 - 关闭 (X)
 "UnButtonpos:1" = 2
 -- 图标 -关闭
@@ -9487,7 +9487,7 @@ race = ""
 [A002]
 _parent = "AId1"
 -- 防御奖励
-DataA = {100, 200, 300, 400, 500, 600, 700, 800, 900}
+DataA = {100.0000, 200.0000, 300.0000, 400.0000, 500.0000, 600.0000, 700.0000, 800.0000, 900.0000}
 -- 编辑器后缀
 EditorSuffix = "百"
 -- 名字
@@ -9895,7 +9895,7 @@ Name = "鬼2"
 [A00C]
 _parent = "AId1"
 -- 防御奖励
-DataA = {1, 2, 3, 4, 5, 6, 7, 8, 9}
+DataA = {1.0000, 2.0000, 3.0000, 4.0000, 5.0000, 6.0000, 7.0000, 8.0000, 9.0000}
 -- 编辑器后缀
 EditorSuffix = "个"
 -- 名字
@@ -9917,7 +9917,7 @@ Name = "鬼3"
 [A00E]
 _parent = "AId1"
 -- 防御奖励
-DataA = {10, 20, 30, 40, 50, 60, 70, 80, 90}
+DataA = {10.0000, 20.0000, 30.0000, 40.0000, 50.0000, 60.0000, 70.0000, 80.0000, 90.0000}
 -- 编辑器后缀
 EditorSuffix = "十"
 -- 名字
@@ -9928,7 +9928,7 @@ levels = 9
 [A00F]
 _parent = "AId1"
 -- 防御奖励
-DataA = {1000, 2000, 3000, 4000, 5000, 6000, 7000, 8000, 9000}
+DataA = {1000.0000, 2000.0000, 3000.0000, 4000.0000, 5000.0000, 6000.0000, 7000.0000, 8000.0000, 9000.0000}
 -- 编辑器后缀
 EditorSuffix = "千"
 -- 名字
@@ -9939,7 +9939,7 @@ levels = 9
 [A00G]
 _parent = "AId1"
 -- 防御奖励
-DataA = {10000, 20000, 30000, 40000, 50000, 60000, 70000, 80000, 90000}
+DataA = {10000.0000, 20000.0000, 30000.0000, 40000.0000, 50000.0000, 60000.0000, 70000.0000, 80000.0000, 90000.0000}
 -- 编辑器后缀
 EditorSuffix = "万"
 -- 名字
@@ -9950,7 +9950,7 @@ levels = 9
 [A00H]
 _parent = "AId1"
 -- 防御奖励
-DataA = {100000, 200000, 300000, 400000, 500000, 600000, 700000, 800000, 900000}
+DataA = {100000.0000, 200000.0000, 300000.0000, 400000.0000, 500000.0000, 600000.0000, 700000.0000, 800000.0000, 900000.0000}
 -- 编辑器后缀
 EditorSuffix = "十万"
 -- 名字
@@ -9961,7 +9961,7 @@ levels = 9
 [A00I]
 _parent = "AId1"
 -- 防御奖励
-DataA = {1000000, 2000000, 3000000, 4000000, 5000000, 6000000, 7000000, 8000000, 9000000}
+DataA = {1000000.0000, 2000000.0000, 3000000.0000, 4000000.0000, 5000000.0000, 6000000.0000, 7000000.0000, 8000000.0000, 9000000.0000}
 -- 编辑器后缀
 EditorSuffix = "百万"
 -- 名字
@@ -12984,6 +12984,21 @@ Ubertip = "冰霜之箭"
 hero = 0
 -- 等级
 levels = 1
+
+[A04N]
+_parent = "Asph"
+-- 名字
+Name = "球体-鬼"
+-- 效果 - 目标
+TargetArt = "Abilities\\Spells\\Other\\SoulBurn\\SoulBurnbuff.mdl"
+-- 效果 - 目标附加点1
+Targetattach = "hand"
+-- 效果 - 目标附加点2
+Targetattach1 = ""
+-- 效果 - 目标附加点3
+Targetattach2 = ""
+-- 效果 - 目标 - 附加数量
+Targetattachcount = 1
 
 [A04O]
 _parent = "AHad"
@@ -16464,6 +16479,8 @@ DataD = {
 }
 -- 名字
 Name = "粉碎（Lv17）"
+-- 需求
+Requires = ""
 -- 提示工具 - 普通 - 扩展
 Ubertip = {
 1 = "给予１５％的概率使得攻击能对周围的单位造成高伤害。（伤害与难度系数有关）",
@@ -16988,7 +17005,7 @@ targs = "air,ground,debris,enemy,neutral,organic"
 [A07G]
 _parent = "AId1"
 -- 防御奖励
-DataA = {-1, -2, -3, -4, -5, -6, -7, -8, -9}
+DataA = {-1.0000, -2.0000, -3.0000, -4.0000, -5.0000, -6.0000, -7.0000, -8.0000, -9.0000}
 -- 编辑器后缀
 EditorSuffix = "个"
 -- 名字
@@ -16999,7 +17016,7 @@ levels = 9
 [A07H]
 _parent = "AId1"
 -- 防御奖励
-DataA = {-10, -20, -30, -40, -50, -60, -70, -80, -90}
+DataA = {-10.0000, -20.0000, -30.0000, -40.0000, -50.0000, -60.0000, -70.0000, -80.0000, -90.0000}
 -- 编辑器后缀
 EditorSuffix = "十"
 -- 名字
@@ -17010,7 +17027,7 @@ levels = 9
 [A07I]
 _parent = "AId1"
 -- 防御奖励
-DataA = {-100, -200, -300, -400, -500, -600, -700, -800, -900}
+DataA = {-100.0000, -200.0000, -300.0000, -400.0000, -500.0000, -600.0000, -700.0000, -800.0000, -900.0000}
 -- 编辑器后缀
 EditorSuffix = "百"
 -- 名字
@@ -17021,7 +17038,7 @@ levels = 9
 [A07J]
 _parent = "AId1"
 -- 防御奖励
-DataA = {-1000, -2000, -3000, -4000, -5000, -6000, -7000, -8000, -9000}
+DataA = {-1000.0000, -2000.0000, -3000.0000, -4000.0000, -5000.0000, -6000.0000, -7000.0000, -8000.0000, -9000.0000}
 -- 编辑器后缀
 EditorSuffix = "千"
 -- 名字
@@ -17032,7 +17049,7 @@ levels = 9
 [A07K]
 _parent = "AId1"
 -- 防御奖励
-DataA = {-10000, -20000, -30000, -40000, -50000, -60000, -70000, -80000, -90000}
+DataA = {-10000.0000, -20000.0000, -30000.0000, -40000.0000, -50000.0000, -60000.0000, -70000.0000, -80000.0000, -90000.0000}
 -- 编辑器后缀
 EditorSuffix = "万"
 -- 名字
@@ -18471,6 +18488,41 @@ Ubertip = "减伤1000"
 item = 1
 -- 种族
 race = "unknown"
+
+[A0A3]
+_parent = "Absk"
+-- 图标 - 普通
+Art = "ReplaceableTextures\\CommandButtons\\BTNMaskOfDeath.blp"
+-- 魔法效果
+BuffID = ""
+-- 按钮位置 - 普通 (X)
+"Buttonpos:1" = 1
+-- 按钮位置 - 普通 (Y)
+"Buttonpos:2" = 1
+-- 魔法施放时间间隔
+Cool = 2.0000
+-- 魔法消耗
+Cost = 10
+-- 移动速度增加
+DataA = 0.0000
+-- 攻击速度增加
+DataB = 0.0000
+-- 所受伤害增加
+DataC = 0.0000
+-- 持续时间 - 普通
+Dur = 0.0010
+-- 编辑器后缀
+EditorSuffix = "(魔界)"
+-- 持续时间 - 英雄
+HeroDur = 0.0010
+-- 热键 - 普通
+Hotkey = "D"
+-- 名字
+Name = "|cffff0000夜神祭|r"
+-- 提示工具 - 普通
+Tip = "|cffff0000夜神祭|r(|cffffcc00D|r)"
+-- 提示工具 - 普通 - 扩展
+Ubertip = "|cffff6800黑阎|r在黑夜中独行,与六界生物签定契约,给予其强大的力量,但在死后却要效命契主.|n|n|cffffff00效果1:|r亲自杀死敌人后将创造一个祭品给自己/魔界,祭品属于自己时,会对敌方造成伤害.祭品属于魔界时,每次攻击都不会造成伤害,反而为回复生命.|cffff6800持续(等级的平方根+10)秒,祭品前3秒是无敌的.|n|r|cffffff00效果2:|r在每次使用技能或者物品时,能创造出3个祭品.|n|n|cffcc99ff祭品上限+10.|r|n|cffffff00当前祭品控制权为魔界,点击切换产生祭品的控制权为自己.|r"
 
 [A0A4]
 _parent = "Apxf"
@@ -20122,6 +20174,41 @@ race = "unknown"
 -- 目标允许
 targs = "air,ground,debris,enemy,neutral,organic"
 
+[A0BI]
+_parent = "Absk"
+-- 图标 - 普通
+Art = "ReplaceableTextures\\CommandButtons\\BTNMaskOfDeath.blp"
+-- 魔法效果
+BuffID = ""
+-- 按钮位置 - 普通 (X)
+"Buttonpos:1" = 1
+-- 按钮位置 - 普通 (Y)
+"Buttonpos:2" = 1
+-- 魔法施放时间间隔
+Cool = 2.0000
+-- 魔法消耗
+Cost = 10
+-- 移动速度增加
+DataA = 0.0000
+-- 攻击速度增加
+DataB = 0.0000
+-- 所受伤害增加
+DataC = 0.0000
+-- 持续时间 - 普通
+Dur = 0.0010
+-- 编辑器后缀
+EditorSuffix = "(自己)"
+-- 持续时间 - 英雄
+HeroDur = 0.0010
+-- 热键 - 普通
+Hotkey = "D"
+-- 名字
+Name = "|cffff0000夜神祭|r"
+-- 提示工具 - 普通
+Tip = "|cffff0000夜神祭|r(|cffffcc00D|r)"
+-- 提示工具 - 普通 - 扩展
+Ubertip = "|cffff6800黑阎|r在黑夜中独行,与六界生物签定契约,给予其强大的力量,但在死后却要效命契主.|n|n|cffffff00效果1:|r亲自杀死敌人后将创造一个祭品给自己/魔界,祭品属于自己时,会对敌方造成伤害.祭品属于魔界时,每次攻击都不会造成伤害,反而为回复生命.|cffff6800持续(等级的平方根+10)秒,祭品前3秒是无敌的.|n|r|cffffff00效果2:|r在每次使用技能或者物品时,能创造出3个祭品.|n|n|cffcc99ff祭品上限+10.|r|n|cffffff00当前祭品控制权为自己,点击切换产生祭品的控制权为魔界.|r"
+
 [A0BJ]
 _parent = "Assk"
 -- 最小伤害
@@ -20633,6 +20720,49 @@ hero = 0
 levels = 1
 -- 目标允许
 targs = "air,ground,debris,enemy,neutral,organic"
+
+[A0C7]
+_parent = "AUfn"
+-- 影响区域
+Area = 600.0000
+-- 图标 - 普通
+Art = "ReplaceableTextures\\CommandButtons\\BTNCorpseExplode.blp"
+-- 魔法施放时间间隔
+Cool = 20.0000
+-- 魔法消耗
+Cost = 100
+-- 范围目标伤害
+DataA = 0.0000
+-- 特定目标伤害
+DataB = 0.0000
+-- 持续时间 - 普通
+Dur = 10.0000
+-- 效果 - 目标点
+EffectArt = ""
+-- 持续时间 - 英雄
+HeroDur = 10.0000
+-- 热键 - 普通
+Hotkey = "Q"
+-- 名字
+Name = "|cff808000千鬼邪|r"
+-- 图标 - 学习
+ResearchArt = "ReplaceableTextures\\CommandButtons\\BTNCorpseExplode.blp"
+-- 热键 - 学习
+Researchhotkey = "Q"
+-- 提示工具 - 学习
+Researchtip = "学习|cff808000千鬼邪|r(|cffffcc00Q|r)"
+-- 提示工具 - 学习 - 扩展
+Researchubertip = "|cffff6800黑阎|r召唤出鬼界最强的黑色心炎对目标及周围造成极大的伤害.|n|cff6495ed|n|r对|cffff9900目标及周围的600范围所有敌人|r造成|cffff9900（力量X1.8+敏捷+智力X1.2）X（等级的平方根）X(50%+范围内敌人总数*10%)|r伤害,并附带减速效果10s,冷却20s.|n|cffffff00目标内敌人越多,伤害值越高.|n|r|cffcc99ff祭品上限+6.|r"
+-- 提示工具 - 普通
+Tip = "|cff808000千鬼邪|r(|cffffcc00Q|r)"
+-- 提示工具 - 普通 - 扩展
+Ubertip = "|cffff6800黑阎|r召唤出鬼界最强的黑色心炎对目标及周围造成极大的伤害.|n|cff6495ed|n|r对|cffff9900目标及周围的600范围所有敌人|r造成|cffff9900（力量X1.8+敏捷+智力X1.2）X（等级的平方根）X(50%+范围内敌人总数*10%)|r伤害,并附带减速效果10s,冷却20s.|n|cffffff00目标内敌人越多,伤害值越高.|n|r|cffcc99ff祭品上限+6.|r"
+-- 等级
+levels = 1
+-- 种族
+race = "human"
+-- 等级要求
+reqLevel = 2
 
 [A0CA]
 _parent = "Assk"
@@ -23418,7 +23548,7 @@ targs = {
 [A0EG]
 _parent = "AId1"
 -- 防御奖励
-DataA = 30000
+DataA = 30000.0000
 -- 编辑器后缀
 EditorSuffix = ""
 -- 名字
