--- a/file/war3map.w3i.ini
+++ b/file/war3map.w3i.ini
@@ -1,8 +1,8 @@
 [地图]
 文件版本 = 25
-地图版本 = 1345
+地图版本 = 1359
 编辑器版本 = 6052
-地图名称 = "轮回之狱 - v2.56C正式版"
+地图名称 = "轮回之狱 - v2.57正式版"
 作者名字 = "Crainax(旧名Laser)"
 地图描述 = [=[
 魔界滋生了六界之外的力量,而人神妖鬼仙界察觉了这种力量，而决定联手起来将魔界歼灭。寻找战友、提交BUG、寻找攻略请加官方地图QQ群148199145。
@@ -87,7 +87,7 @@ z轴终点 = 5000.0000
 种族 = 1
 修正出生点 = 1
 名字 = "玩家 1"
-出生点 = {-14528.0000, -14720.0000}
+出生点 = {-14528.0000, -14976.0000}
 低结盟优先权标记 = {}
 高结盟优先权标记 = {2, 3, 4, 5, 6}
 
@@ -97,7 +97,7 @@ z轴终点 = 5000.0000
 种族 = 1
 修正出生点 = 1
 名字 = "玩家 2"
-出生点 = {-14528.0000, -14720.0000}
+出生点 = {-14528.0000, -14976.0000}
 低结盟优先权标记 = {}
 高结盟优先权标记 = {1, 3, 4, 5, 6}
 
@@ -107,7 +107,7 @@ z轴终点 = 5000.0000
 种族 = 1
 修正出生点 = 1
 名字 = "玩家 3"
-出生点 = {-14528.0000, -14720.0000}
+出生点 = {-14528.0000, -14976.0000}
 低结盟优先权标记 = {}
 高结盟优先权标记 = {1, 2, 4, 5, 6}
 
@@ -117,7 +117,7 @@ z轴终点 = 5000.0000
 种族 = 1
 修正出生点 = 1
 名字 = "玩家 4"
-出生点 = {-14528.0000, -14720.0000}
+出生点 = {-14528.0000, -14976.0000}
 低结盟优先权标记 = {}
 高结盟优先权标记 = {1, 2, 3, 5, 6}
 
@@ -127,7 +127,7 @@ z轴终点 = 5000.0000
 种族 = 1
 修正出生点 = 1
 名字 = "玩家 5"
-出生点 = {-14528.0000, -14720.0000}
+出生点 = {-14528.0000, -14976.0000}
 低结盟优先权标记 = {}
 高结盟优先权标记 = {1, 2, 3, 4, 6}
 
@@ -137,7 +137,7 @@ z轴终点 = 5000.0000
 种族 = 1
 修正出生点 = 1
 名字 = "玩家 6"
-出生点 = {-14528.0000, -14720.0000}
+出生点 = {-14528.0000, -14976.0000}
 低结盟优先权标记 = {}
 高结盟优先权标记 = {1, 2, 3, 4, 5}
 
@@ -147,7 +147,7 @@ z轴终点 = 5000.0000
 种族 = 4
 修正出生点 = 1
 名字 = "五界联盟"
-出生点 = {-14528.0000, -14720.0000}
+出生点 = {-14528.0000, -14976.0000}
 低结盟优先权标记 = {}
 高结盟优先权标记 = {}
 
@@ -157,7 +157,7 @@ z轴终点 = 5000.0000
 种族 = 3
 修正出生点 = 1
 名字 = "野怪"
-出生点 = {-14528.0000, -14720.0000}
+出生点 = {-14528.0000, -14976.0000}
 低结盟优先权标记 = {}
 高结盟优先权标记 = {}
 
@@ -167,7 +167,7 @@ z轴终点 = 5000.0000
 种族 = 3
 修正出生点 = 1
 名字 = "魔界"
-出生点 = {-14528.0000, -14720.0000}
+出生点 = {-14528.0000, -14976.0000}
 低结盟优先权标记 = {}
 高结盟优先权标记 = {}
 
